--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -1,4 +1,5 @@
 abbreviate ,/v./@縮略;
+abominable ,/adj./@可惡的;,/adj./@可憎的;,/adj./@討厭的;
 abrogation ,/n./@廢除;,/n./@取消;
 absolutely ,/adv./@完全地;,/adv./@绝对地;
 abstemious ,/adj./@有節制的;
@@ -86,6 +87,7 @@ benevolent ,/adj./@仁慈的;,/adj./@樂善好施的;,/adj./@慈善的;
 binoculars ,/n./@双筒望远镜;
 biological ,/adj./@生物学的;
 bitterness ,/n./@苦;,/n./@苦痛;,/n./@苦難;
+bloodstain ,/n./@血跡;
 blundering ,/adj./@浮躁的;
 boisterous ,/adj./@喧鬧的;,/adj./@狂暴的;,/adj./@猛烈的;
 borderline ,/n./@邊界綫;,/n./@邊界;,/n./@界綫;
@@ -111,6 +113,8 @@ chivalrous ,/adj./@俠義的;
 chromosome ,/n./@染色体;
 circumcise ,/v./@割除包皮;,/v./@割除陰蒂;
 circumvent ,/v./@包圍;,/v./@繞行;
+clumsiness ,/n./@笨拙;
+collarbone ,/n./@鎖骨;
 collateral ,/adj./@附带的;,/adj./@有担保的;,/n./@抵押的;,/n./@抵押物;
 collecting ,/n./@收集;
 collection ,/n./@收集;
@@ -143,7 +147,7 @@ conclusion ,/n./@结论;,/n./@推论;
 conclusive ,/adj./@结束的;,/adj./@结论性的;,/adj./@确凿的;
 concoction ,/n./@调制品;,/n./@混合物;,/n./@调制;,/n./@烹制;,/n./@编造;
 concurrent ,/adj./@同時發生的;
-concussion ,/n./@衝擊;
+concussion ,/n./@衝擊;,/n./@腦震盪;
 condescend ,/v./@屈尊;,/v./@俯就;
 condolence ,/n./@哀悼;,/n./@慰問;
 conductive ,/adj./@传导的;
@@ -182,6 +186,7 @@ conversely ,/adj./@相反的;
 conversion ,/n./@轉換;
 conviction ,/n./@定罪;,/n./@确信;
 convincing ,/adj./@有说服力的;
+convulsion ,/n./@抽搐;,/n./@驚厥;,/n./@痉挛;,/n./@狂笑;,/n./@動亂;
 coordinate ,/v./@协调;,/v./@配合;,/n./@坐标;,/adj./@并列的;,/adj./@同等的;
 cornucopia ,/n./@大量;
 correspond ,/v./@相符合;
@@ -235,7 +240,7 @@ discussion ,/n./@讨论;
 disgusting ,/adj./@令人厌恶的;
 dispossess ,/vt./@剥夺;
 disruption ,/n./@破坏;
-disruptive ,/adj./@破坏性的;
+disruptive ,/adj./@破坏性的;,/adj./@引起混亂的;,/adj./@顛覆性的;
 distillery ,/n./@蒸餾;
 distortion ,/n./@扭曲;,/n./@失真;,/n./@變形;
 distribute ,/v./@分配;,/v./@分布;
@@ -309,6 +314,7 @@ guillotine ,/n./@斷頭台;
 gymnastics ,/n./@體操;
 handicraft ,/n./@手工艺品;
 helicopter ,/n./@直升飞机;
+hemorrhage ,/n./@出血;
 hemorrhoid ,/n./@痔瘡;
 henceforth ,/adv./@从此之后;
 hereditary ,/adj./@遗传的;,/adj./@世袭的;
@@ -341,6 +347,7 @@ indefinite ,/adj./@不明確的;,/adj./@不確定的;
 indelicate ,/adj./@下流的;,/adj./@不雅的;,/adj./@無教養的;
 indication ,/n./@象征;,/n./@迹象;
 indictment ,/n./@控告;,/n./@起訴;,/n./@状告;,/n./@罪证;
+indigenous ,/adj./@土著的;,/adj./@本地的;,/adj./@当地的;
 individual ,/n./@个人;,/adj./@个人的;,/adj./@各自的;
 inducement ,/n./@誘導;,/n./@動機;
 industrial ,/adj./@工业的;
@@ -364,6 +371,7 @@ intestinal ,/adj./@肠的;
 intestines ,/n./@肠子;
 intimidate ,/v./@恐吓;,/v./@威嚇;,/v./@脅迫;
 intonation ,/n./@声调;
+intoxicate ,/vt./@使喝醉;,/vt./@使陶醉;
 intriguing ,/adj./@吸引人的;
 introspect ,/v./@自省;,/v./@反省;
 invalidate ,/v./@失效;,/v./@取消;
@@ -374,6 +382,7 @@ invigorate ,/v./@激活;
 invincible ,/adj./@無敵的;
 invitation ,/n./@邀请;
 irrational ,/adj./@不合理的;
+irreverent ,/adj./@不敬的;
 irritating ,/adj./@令人恼怒的;
 jeopardize ,/v./@危及;
 journalism ,/n./@新聞業;
@@ -425,6 +434,7 @@ mutability ,/n./@易變性;
 mutilation ,/n./@伤害;,/n./@截除;,/n./@损坏;,/n./@损伤;
 myocardial ,/adj./@心肌的;
 mysterious ,/adj./@神秘的;
+narcissist ,/n./@自我陶醉者;,/n./@孤芳自赏者;,/n./@自戀者;
 navigation ,/n./@航行;,/n./@航海;
 neutralize ,/v./@中和;,/v./@抵消;
 nomination ,/n./@提名;,/n./@任命;
@@ -441,6 +451,7 @@ opposition ,/n./@反对;
 optimistic ,/adj./@乐观的;
 ornamental ,/adj./@裝飾的;
 orthogonal ,/adj./@正交的;,/adj./@直角的;
+outlandish ,/adj./@異國風格的;,/adj./@古怪的;,/adj./@离奇的;,/adj./@偏僻的;
 paedophile ,/n./@恋童癖者;
 pagination ,/n./@分页;
 parametric ,/n./@參數;
@@ -468,6 +479,7 @@ phenomenal ,/adj./@显著的;,/adj./@現象的;,/adj./@非凡的;
 phenomenon ,/n./@現象;,/n./@非凡的人;
 philosophy ,/n./@哲学;
 phonograph ,/n./@留声机;,/n./@唱机;
+phosphorus ,/n./@磷;
 pickpocket ,/n./@扒手;,/n./@小偷;
 plantation ,/n./@種植園;
 playwright ,/n./@剧作家;
@@ -502,6 +514,7 @@ psychopath ,/n./@精神病人;
 pubescence ,/n./@青春期;,/n./@軟毛;
 pugnacious ,/adj./@好战的;,/adj./@好斗的;
 radicalism ,/n./@激进主义;
+radiosonde ,/n./@無線電高空測候器;,/n./@無線電探空儀;
 reasonable ,/adj./@合理的;
 receptacle ,/n./@儲藏所;
 recreation ,/n./@娱乐;
@@ -516,6 +529,7 @@ relinquish ,/v./@放棄;
 reluctance ,/n./@不願;,/n./@勉强;
 remarkable ,/adj./@卓越的;,/adj./@非凡的;,/adj./@值得注意的;
 remorseful ,/adj./@懊悔的;,/adj./@悔恨的;
+remunerate ,/vt./@酬勞;
 repatriate ,/v./@遣返;
 repentance ,/n./@悔悟;
 repetition ,/n./@重复;
@@ -565,7 +579,7 @@ specialist ,/n./@專家;
 specialize ,/v./@专攻;
 standalone ,/adj./@單獨的;,/adj./@獨立的;,/adj./@脫機的;
 standstill ,/n./@停頓;
-stationary ,/adj./@固定的;
+stationary ,/adj./@固定的;,/adj./@不動的;
 stationery ,/n./@文具;,/n./@信紙;
 statistics ,/n./@统计;,/n./@统计学;
 stepfather ,/n./@继父;
@@ -588,6 +602,7 @@ suggestion ,/n./@建议;
 supersonic ,/adj./@超音速的;,/n./@超音速;
 supplement ,/v./@增補;,/v./@補充;,/n./@補充;
 supplicate ,/vt./@懇求;,/vt./@哀求;
+surrealism ,/n./@超現實主義;
 suspicious ,/adj./@怀疑的;
 synonymous ,/adj./@同義的;,/adj./@同義詞的;
 systematic ,/adj./@系統的;,/adj./@有組織的;
@@ -599,7 +614,7 @@ throughout ,/prep./@貫穿;,/adv./@全部;
 throughput ,/n./@生產量;
 toothpaste ,/n./@牙膏;
 tournament ,/n./@锦标赛;
-tourniquet ,/n./@止血帶;
+tourniquet ,/n./@止血帶;,/n./@壓血帶;
 trajectory ,/n./@軌道;,/n./@軌綫;,/n./@彈道;
 transcript ,/n./@抄本;,/n./@副本;
 transience ,/n./@短暫;,/n./@瞬態;
@@ -609,6 +624,7 @@ transitive ,/adj./@及物的;,/adj./@过渡的;,/n./@传递;,/n./@及物动词;
 translucid ,/adj./@半透明的;
 transplant ,/v./@移植;
 tremendous ,/adj./@极大的;,/adj./@极好的;
+triviality ,/n./@瑣事;,/n./@瑣碎;
 tumultuous ,/adj./@混乱的;,/adj./@骚乱的;,/adj./@嘈杂的;,/adj./@吵闹的;,/adj./@喧哗的;
 turbulence ,/n./@动荡;
 ultimately ,/adj./@终极的;
@@ -619,6 +635,7 @@ undeniable ,/adj./@不可否認的;,/adj./@無可爭辯的;
 underneath ,/v./在...之@下;
 underscore ,/n./@下劃線;,/n./@底線;,/v./@強調;
 understand ,/v./@明白;,/v./@懂得;
+undeterred ,/adj./@未受阻的;,/adj./@不受影響的;
 unexpected ,/adj./@意外的;
 unilateral ,/adj./@单方面的;
 university ,/n./@大學;
