--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -15,6 +15,8 @@ announcement ,/n./@宣布;
 antediluvian ,/adj./@古老的;
 anthropology ,/n./@人類學;
 anticipation ,/n./@期望;,/n./@预感;
+appendectomy ,/n./@闌尾切除手術;
+appendicitis ,/n./@闌尾炎;,/n./@盲腸炎;
 appreciation ,/n./@欣赏;
 apprehension ,/n./@憂慮;
 architecture ,/n./@架构;
@@ -26,7 +28,9 @@ bloodletting ,/n./@放血疗法;
 bureaucratic ,/adj./@官僚主義的;
 cancellation ,/n./@刪除;,/n./@取消;
 canonicalize ,/v./@規範化;
+cantankerous ,/adj./@脾氣壞的;,/adj./@難相處的;
 carelessness ,/n./@粗心;,/n./@大意;
+catastrophic ,/adj./@灾难性的;
 circumcentre ,/n./@外心;
 circumscribe ,/v./@限制;
 circumstance ,/n./@环境;,/n./@情况;,/n./@境遇;,/n./@事件;
@@ -57,6 +61,7 @@ contribution ,/n./@贡献;
 contumacious ,/adj./@不妥協的;
 conveniently ,/adv./@方便的;
 conversation ,/n./@交談;,/n./@會話;
+correctional ,/adj./@改造的;,/adj./@改正的;,/adj./@劳改的;
 cosmopolitan ,/adj./@全球的;,/adj./@国际的;,/n./@大都市;
 covetousness ,/n./@貪婪;,/n./@貪心;,/n./@妄羡;
 degeneration ,/n./@退化;
@@ -82,10 +87,12 @@ entrepreneur ,/n./@创业者;
 estrangement ,/n./@疏離;,/n./@疏遠;,/n./@隔閡;
 exaggeration ,/n./@夸大;,/n./@夸张;
 exasperation ,/n./@憤怒;,/n./@惡化;
+excruciating ,/adj./@難以忍受的;,/adj./@極痛苦的;
 experimental ,/adj./@实验性的;
 exploitation ,/n./@開發;,/n./@利用;
 extravagance ,/n./@奢侈;,/n./@浪費;
 gerontocracy ,/n./@老人政治;,/n./@老人政府;
+hallucinogen ,/n./@迷幻劑;,/n./@致幻剂;
 heterosexual ,/adj./@異性的;,/adj./@異性戀的;
 housewarming ,/n./@乔迁庆宴;
 hypothetical ,/adj./@假设的;,/adj./@假言的;
@@ -101,6 +108,7 @@ indebtedness ,/n./@感激;
 independence ,/n./@独立;,/n./@独立性;
 indifference ,/n./@冷淡;,/n./@不关心;
 individually ,/adv./@个人的;
+inexplicable ,/adj./@莫名其妙的;,/adj./@无法解释的;,/adj./@無法說明的;
 infiltration ,/n./@渗透;
 inflammatory ,/adj./@发炎的;
 infringement ,/n./@侵權;
@@ -132,6 +140,7 @@ misquotation ,/n./@误引;
 modification ,/n./@修正;
 monotheistic ,/adj./@一神論的;,/adj./@一神教的;
 narcissistic ,/adj./@孤芳自赏的;
+neurasthenic ,/adj./@神經衰弱的;,/adj./@神經衰弱症的;
 nevertheless ,/conj./@尽管如此;
 notification ,/n./@通知;
 occupational ,/adj./@职业的;
@@ -158,7 +167,9 @@ professional ,/adj./@专业的;,/adj./@职业的;
 proportional ,/adj./@成比例的;
 prostitution ,/n./@賣淫;
 protuberance ,/n./@隆起;,/n./@隆起物;,/n./@凸出物;,/n./@突出物;
+psychotropic ,/adj./@治療精神異常的;
 purification ,/n./@净化;,/n./@提純;
+putrefaction ,/n./@化膿;,/n./@腐烂;,/n./@腐敗;
 quadriplegic ,/adj./@四肢瘫痪的;,/n./@四肢瘫痪者;
 questionable ,/adj./@可疑的;
 reassignment ,/n./@再分配;,/n./@再指派;,/n./@再指定;,/n./@重新分配;
