--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -39,6 +39,7 @@ correspondent ,/adj./@相关联的;
 corresponding ,/adj./@相当的;
 counterattack ,/v./@反擊;,/v./@反攻;
 counterweight ,/n./@平衡;,/n./@平衡重;
+decomposition ,/n./@腐爛;,/n./@分解;
 demonstration ,/n./@示範;,/n./@展示;,/n./@示威;
 deterioration ,/n./@惡化;,/n./@退化;,/n./@墮落;
 determination ,/n./@决心;
@@ -73,6 +74,7 @@ justification ,/n./@正当性;
 magnification ,/n./@放大;,/n./@放大率;
 manifestation ,/n./@表明;,/n./@表现;,/n./@表现形式;
 Mediterranean ,/adj./@地中的;
+meteorologist ,/n./@氣象學家;,/n./@氣象學者;
 miscellaneous ,/adj./@混雜的;,/adj./@各種各樣的;
 misunderstood ,/v./@误解;,/v./@误会;
 monochromatic ,/adj./@單色的;
