--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -7,6 +7,7 @@ classification ,/n./@分类;
 congratulation ,/n./@祝贺;
 disappointedly ,/adv./@失望的;
 discrimination ,/n./@歧視;,/n./@辨別;,/n./@區別;
+dysproteinosis ,/n./@蛋白質缺乏症;
 gentrification ,/n./@中产阶级化;
 identification ,/n./@鉴定;
 implementation ,/n./@实现;,/n./@实行;,/n./@执行;
@@ -15,6 +16,7 @@ initialization ,/n./@初始化;
 interpretation ,/n./@翻譯;,/n./@解釋;,/n./@口譯;
 interpupillary ,/adj./@瞳孔间的;
 methodological ,/adj./@方法論的;
+mountaineering ,/n./@登山;,/n./@登山運動;
 multiplication ,/n./@乘法;,/n./@增加;
 pharmaceutical ,/adj./@制药的;,/adj./@制药学的;
 philanthropist ,/n./@慈善家;,/n./@博愛主義者;
