--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -221,6 +221,7 @@ oil ,/n./@油;
 old ,/adj./@老的;,/adj./@舊的;
 one ,/n./@一個;,/adj./@一個;
 opt ,/vi./@選擇;
+orb ,/n./@球;,/n./@球狀物;,/n./@寶球;
 ore ,/n./@礦石;
 our ,/adj.//pron./@我們的;
 out ,/adv./@外;,/adv./@向外;,/adj./在@外;
@@ -258,7 +259,7 @@ rat ,/n./@耗子;,/n./@老鼠;
 raw ,/adj./@生的;
 ray ,/n./@射綫;
 red ,/adj./@紅色的;,/n./@紅;
-rib ,/n./@肋排;
+rib ,/n./@肋骨;,/n./@肋條;
 rid ,/vt./(使)@擺脫;
 rim ,/n./@邊;,/n./@邊緣;
 rip ,/v./@撕;,/v./@鋸;
