--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -85,7 +85,7 @@ bone ,/n./@骨頭;
 boob ,/n./@乳房;
 book ,/n./@書;
 boom ,/v./@爆发;
-boot ,/n./@靴子;,/v./@引導;
+boot ,/n./@靴子;,/v./@引導;,/vt./@逐出;,/vt./@趕走;,/n./@解僱;
 bore ,/v./@鑽孔;,/v./@煩擾;
 boss ,/n./@老板;
 both ,/adv./@兩者都;,/conj./@既;,/adj./@兩個的;
@@ -173,7 +173,7 @@ crop ,/n./@莊稼;
 crow ,/n./@烏鴉;,/v./@啼叫;
 cuff ,/n./@袖口;,/n./@手铐;,/v./@上袖口;,/v./@戴手铐;,/v./@毆斗;,/v./@用巴掌打;
 cunt ,/n./(女性)@陰部;
-curb ,/n./@路沿;,/n./@路邊;,/v./@控制;,/v./@制止;,/v./@束縛;
+curb ,/n./@路沿;,/n./@路邊;,/v./@控制;,/v./@制止;,/v./@束縛;,/vt./@約束;,/vt./@限制;
 cure ,/v.//n./@治療;,/v.//n./@矯正;
 curl ,/v./@彎曲;,/n./@捲髮;
 cute ,/adj./@可愛的;
@@ -314,6 +314,7 @@ flaw ,/n./@缺點;,/n./@瑕疵;
 flea ,/n./@跳蚤;
 flee ,/vi./@逃跑;,/v./@逃離;
 flew ,/v./<fly 的過去式>@飛;
+flex ,/vt./@收縮;,/vt./@屈曲;
 flip ,/v./@彈;,/v./@擲;
 flog ,/vt./@鞭打;,/vt./@鞭策;
 flop ,/v./@拋下;,/n./@失敗;
@@ -347,9 +348,11 @@ fuse ,/v./@熔化;,/n./@保險絲;,/n./@導火綫;,/v./@融合;
 fuss ,/n./@焦躁;,/n./@忙亂;
 gage ,/n./@抵押;
 gain ,/v./@獲得;
+gale ,/n./@強風;
 game ,/n./@遊戲;
 gank ,/v./@調情;,/v./@趁機攻擊;
 gape ,/v./@裂開;,/v./@張開;,/v./@呵欠;,/n./@裂口;,/n./@張嘴;
+gash ,/n./@深長的切口;,/n./@深長的傷口;,/n./@狹長的窪地;
 gasp ,/v./@喘氣;
 gate ,/n./@大門;
 gave ,/v./<give 的過去式>@給;
@@ -384,7 +387,7 @@ gray ,/adj./@灰色的;
 grew ,/v./<grow的過去式>@長大;
 grey ,/adj./@灰;,/adj./@灰色的;,/n./@灰色;,/v./@老化;
 grid ,/n./@網格;,/n./@輸電網;
-grim ,/adj./@冷酷的;
+grim ,/adj./@冷酷的;,/adj./@恐怖的;,/adj./@严酷的;
 grin ,/v./@露齒笑;
 grip ,/v./@緊握;,/n./@柄;,/v./@支配;
 grit ,/v./@研磨;
@@ -417,7 +420,7 @@ heal ,/v./@治愈;
 hear ,/v./@聽;
 heat ,/n./@熱;
 heed ,/v./@註意;,/v./@留心;
-heel ,/n./@踵;
+heel ,/n./@踵;,/n./@腳跟;,/n./@腳後跟;,/n./@後跟;,/n./@高跟鞋;,/n./@根部;
 heft ,/n./@重量;,/v./@舉起;
 heir ,/n./@繼承人;
 hell ,/n./@地獄;
@@ -456,6 +459,7 @@ hull ,/n./@船体;,/n./@殼;,/n./@荚;,/n./@皮;,/n./@蒂;,/n./@花萼;,/n./@船
 hunt ,/v./@捕獵;
 hurl ,/v./@猛投;,/v./@猛擲;,/v./@丟下;
 hurt ,/v./@傷害;
+hush ,/vt./@使沉默;,/vt./@使安靜;,/n./@靜寂;,/n./@沉默;
 hype ,/v./@大肆宣傳;,/n./@不实宣传;,/n./@宣传骗局;,/vt./@夸张地宣传;
 i've ,/v./@我已;
 icon ,/n./@圖標;
@@ -498,6 +502,7 @@ knot ,/n./@結;,/n./@扣;
 know ,/v./@知道;
 lack ,/n.v./@缺少;
 lady ,/n./@女士;
+lair ,/n./@窩;,/n./@兽穴;,/n./@藏身處;
 lake ,/n./@湖;
 lamb ,/n./@綿羊;
 lame ,/adj./@跛足的;,/adj./@蹩腳的;
@@ -525,6 +530,7 @@ lend ,/v./@出借;
 lens ,/n./@鏡頭;,/n./@透鏡;,/n./@鏡片;,/n./@晶體;,/n./@晶狀體;
 less ,/adj./@更少;
 lest ,/v./@防止;,/conj./@以免;
+lewd ,/adj./@好色的;,/adj./@淫蕩的;,/adj./@淫秽的;,/adj./@下流的;,/adj./@猥褻的;
 liar ,/n./@騙子;
 life ,/n./@生活;,/n./@人生;,/n./@生命;
 lift ,/v./@提起;,/v./@舉起;,/n./@電梯;
@@ -549,8 +555,9 @@ logo ,/n./@商標;
 loin ,/n./@腰部;,/n./@下身;,/n./@腰肉;
 long ,/adj./@長@的;
 look ,/v.//vi.//vt./@看;
-loom ,/v./@隱隱出現;,/n./@織布機;
+loom ,/v./@隱隱出現;,/n./@織布機;,/vi./@隱約顯現;,/vi./@陰森地逼近;
 loop ,/n./@環;,/n./@循環;
+loot ,/n./@戰利品;,/n./@掠奪物;,/n./@贓物;
 lord ,/n./@主人;,/n./@上帝;
 lore ,/n./@知識;,/n./@学问;,/n./@传说;
 lose ,/v./@遺失;,/v./@失敗;
@@ -566,6 +573,7 @@ lurk ,/v./@潛伏;,/v./@隱藏;
 lush ,/adj./@茂盛的;,/adj./@葱翠的;,/adj./@豪华的;,/adj./@性感的;
 lust ,/n./@慾望;
 luxe ,/n./@奢侈;
+lynx ,/n./@山貓;,/n./@猞猁;
 mace ,/n./@狼牙棒;,/n./@權杖;
 made ,/v./<make的過去式>@制造;
 maid ,/n./@侍女;
@@ -622,7 +630,7 @@ monk ,/n./@僧侶;
 mono ,/abbr./@單聲道;,/adj./@單的;
 mood ,/n./@心情;
 moon ,/n./@月亮;
-moor ,/v./@係住;,/n./@沼澤;
+moor ,/v./@係住;,/n./@沼澤;,/vi./@停泊;,/vi./@繫泊;
 mope ,/v./@憂鬱;
 more ,/adj./@更多;
 moss ,/n./@苔蘚;,/n./@地衣;
@@ -791,6 +799,7 @@ rent ,/v./@租;
 rest ,/v./@休息;,/n./@休息;
 rice ,/n./@米飯;
 rich ,/adj./@富有的;
+rife ,/adj./@流行的;,/adj./@蔓延的;,/adj./@充斥的;,/adj./@盛传的;
 rift ,/n./@裂縫;,/v./@裂開;
 ring ,/n./@鈴聲;,/n./@戒指;
 riot ,/n./@暴亂;
@@ -851,7 +860,7 @@ sept ,/n./@氏族;
 sexy ,/adj./@性感的;
 shag ,/n./@粗毛;
 sham ,/n./@贗品;,/v./@假冒;
-shed ,/v./@流出;
+shed ,/v./@流出;,/n./@棚;
 shin ,/v./@攀;,/v./@爬;,/n./@脛骨;
 ship ,/n./@船;
 shit ,/n./@屎;
@@ -876,10 +885,12 @@ size ,/n./@大小;,/n./@尺寸;
 skim ,/v./@掃視;
 skin ,/n./@皮膚;
 skip ,/v./@跳過;,/v./@略過;
+slab ,/n./@厚板;,/n./@厚片;
 slam ,/v./@猛擊;,/v./@砰地关上;
 slap ,/v./@摑;,/v./@拍擊;
 slat ,/n./@板條;,/n./@條板;
 slay ,/v./@殺害;
+sled ,/n./@雪橇;
 slim ,/adj./@苗條的;,/adj./@瘦的;
 slip ,/v./@滑動;
 slit ,/v./@割裂;,/v./@撕裂;
@@ -891,7 +902,7 @@ slur ,/v./@咕噥;
 slut ,/n./@母狗;,/n./@蕩婦;
 smog ,/n./@煙霧;
 smug ,/adj./@自鳴得意的;
-snap ,/adj./@突然的;
+snap ,/adj./@突然的;,/vt./@猛咬;,/vt./@折斷;,/n./@猛咬;,/n./@突然折斷;,/n./@噼啪聲;
 snob ,/n./@勢利眼;,/n./@勢利小人;
 snog ,/v./@親吻;,/v./@愛撫;
 snot ,/n./@鼻涕;
@@ -948,6 +959,7 @@ talk ,/v./@交談;
 tall ,/adj./@髙@的;
 tank ,/n./@坦克;,/n./@水箱;
 tape ,/n./@膠帶;,/n./@磁帶;
+tarp ,/n./@柏油帆布;
 tart ,/adj./@刻薄的;,/adj./@苛刻的;
 task ,/n./@工作;
 taut ,/adj./@拉緊的;,/adj./@緊張的;,/adj./@整潔的;
@@ -963,6 +975,7 @@ test ,/v./@測試;
 text ,/n./@文本;
 than ,/conj./@比;
 that ,/pron./@那個;
+thaw ,/vi./@融化;,/vi./@解凍;
 thee ,/pron./@你;
 them ,/pron./@他們;
 then ,/conj.//adv./@然后;,/adv./@因此;
@@ -1003,6 +1016,7 @@ trap ,/n./@圈套;,/n./@陷阱;,/v./@誘捕;,/n./@存水灣;
 tree ,/n./@樹;
 trek ,/n./@跋涉;,/v./@搬運;,/vi./@长途跋涉;
 trim ,/v./@修剪;,/v./@削減;
+trio ,/n./@三件套;,/n./@三人組;,/n./@三重奏;,/n./@三重唱;
 trot ,/v./@小步快跑;,/v./@碎步急行;,/v./@快步走;
 troy ,/n./@特洛伊;
 true ,/adj./@眞的;
@@ -1013,11 +1027,13 @@ turd ,/n./@糞;,/n./@糞便;
 turf ,/n./@草地;,/n./@地盘;,/n./@泥炭;,/n./@赛马;
 turn ,/v./@轉向;,/v./@變化;,/v./@轉動;
 twat ,/n./@笨蛋;,/n./@陰門;,/n./@娘們;
+twig ,/n./@細枝;
 twin ,/n./@孿生;,/adj./@孿生的;
 twit ,/v./@挖苦;,/v./@嘲笑;
 type ,/n./@類型;,/v./@鍵入;
 tyre ,/n./@輪胎;
 ugly ,/adj./@醜的;,/adj./@醜陋的;
+ulna ,/n./@尺骨;
 unit ,/n./@單元;
 urge ,/v./@渴望;,/v./@敦促;
 user ,/n./@用戶;,/n./@使用者;
@@ -1026,6 +1042,7 @@ vale ,/n./@溪谷;,/n./@谷;
 vamp ,/v./@修補;,/v./@拼湊;,/v./@卽興伴奏;,/n./@鞋面;
 vary ,/v./@變化;,/v./@多樣化;
 vast ,/adj./@廣闊的;,/adj./@浩瀚的;
+veer ,/vi./@轉向;,/vi./@改變方向;,/vi./@改變航向;
 veil ,/n./@面紗;,/n./@面罩;,/v./@遮蔽;,/v./@掩飾;
 vend ,/v./@出售;,/v./@售賣;
 verb ,/n./@動詞;
@@ -1096,10 +1113,12 @@ yeah ,/n./@是;
 year ,/n./@年;
 yell ,/v./@叫喊;
 yelp ,/v./@叫喊;
+yeti ,/n./@雪人;
 yike ,/n./@爭吵;,/n./@打架;
 yolk ,/n./@蛋黃;,/n./@卵黃;
 your ,/pron./@你的;
 zeal ,/n./@熱忱;
 zero ,/n./@零;
 zest ,/n./@興趣;,/n./@熱心;,/n./@風味;
+zinc ,/n./@鋅;
 zoom ,/v./@變焦;,/v./@移動;,/v./@急速上升;
