--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -1,3 +1,4 @@
+abate ,/vt./@減少;,/vt./@減弱;,/vt./@減輕;
 abbey ,/n./@大修道院;
 abhor ,/v./@極度厭惡;
 abide ,/v./@遵守;
@@ -67,6 +68,7 @@ ankle ,/n./@踝;
 annoy ,/v./@惹惱;,/v./@(使)煩惱;
 annul ,/v./@宣告無效;
 antic ,/adj./@滑稽可笑的;
+aorta ,/n./@主動脈;
 apart ,/adv./@分離;,/adj./@分離的;
 appal ,/v./@驚嚇;,/v./@減弱;,/v./@變得蒼白;
 apple ,/n./@苹果;
@@ -168,16 +170,19 @@ breed ,/v./@繁殖;,/v./@飼養;,/n./@品種;
 bride ,/n./@新娘;
 brief ,/adj./@簡短的;,/n./@簡報;,/n./@摘要;
 bring ,/v./@帶來;
+brink ,/n./@邊緣;
 brisk ,/adj./@敏捷的;,/adj./@活躍的;,/adj./@凜冽的;
 broad ,/adj./@寬的;,/adj./@寬闊的;,/adj./@廣闊的;,/adj./@遼闊的;
 broke ,/adj./@被破壞的;
 brood ,/n./@窩;,/v./@孵;,/v./@沉思;
 broom ,/n./@掃帚;
 brown ,/adj./@棕色的;
+brunt ,/n./@衝擊;,/n./@撞擊;
 brush ,/n./@刷;
 brute ,/n./@畜生;,/n./@獸;,/adj./@畜生般的;,/adj./@殘忍的;
 build ,/v./@建築;
 built ,/v./@建造@<build>;
+bulge ,/n./@腫脹;,/n./@凸塊;
 bully ,/v./@欺負;,/n./@惡霸;
 bunch ,/n./@束;
 burst ,/vi./@爆炸;
@@ -202,6 +207,7 @@ cease ,/v./@停止;
 chain ,/n./@鎖鏈;,/n./@链条;,/n./@束缚;,/vt./@用链条拴住;
 chair ,/n./@椅子;
 chalk ,/n./@粉筆;
+champ ,/vt./@大聲地咀嚼;,/vt./@咯咯地咬;,/vt./@咔嚓咔嚓地咀嚼;
 chant ,/n./@聖歌;,/n./@贊美詩;,/v./@唱;,/v./@詠唱;
 charm ,/n./@吸引;,/v./@迷惑;
 chart ,/n./@圖表;,/n./@海圖;
@@ -277,14 +283,15 @@ crank ,/n./@曲柄;,/n./@怪人;,/vi./@轉動曲柄;,/vt./@用曲柄轉動;
 crash ,/v./@碰撞;,/v./@墜毀;
 crate ,/n./@筐;,/n./@簍;,/n./@箱;,/n./@分隔箱;
 crave ,/v./@渴望;,/v./@懇求;
-crawl ,/v./@爬;
+crawl ,/v./@爬;,/vi./@爬行;
 crazy ,/adj./@瘋狂的;
-creak ,/v./@咯吱咯吱響;
+creak ,/v./@咯吱咯吱響;,/n./@咯吱咯吱聲;
 cream ,/n./@奶油;
 creed ,/n./@信條;,/n./@教義;
 creek ,/n./@小溪;,/n./@小灣;
 creep ,/v./@爬;
 cress ,/n./@水芹;
+crest ,/n./@顶峰;,/n./@波峰;,/n./@羽飾;,/n./@紋飾;,/n./@肉冠;,/n./@羽冠;
 crime ,/n./@罪;
 crimp ,/n./@捲曲;,/n./@褶皺;
 crisp ,/adj./@鬆脆的;
@@ -342,7 +349,7 @@ doubt ,/v./@懷疑;
 dough ,/n./@麵團;,/n./@錢;
 douse ,/v./@熄滅;,/v./@弄濕;,/v./@浸泡;,/v./@脫掉;
 draft ,/n./@草稿;,/n./@征募;,/n./@征兵;,/n./@服役;,/n./@汇票;
-drain ,/v./@排水;,/n./@排水;
+drain ,/vt./@排出;,/n./@排水;
 drama ,/n./@戲劇;
 drawl ,/v./@慢吞吞地說;
 dread ,/n./@恐懼;,/n./@懼怕;
@@ -353,7 +360,7 @@ drill ,/v./@鑽;,/n./@訓練;,/n./@鑽;,/n./@鑽頭;,/vt./@訓練;
 drink ,/v./@喝;,/v./@飲;
 drive ,/v./@駕駛;,/v./@驅動;,/n./@驱动器;,/vt./@操作;,/vi./@开车;,/n./@驱赶;,/vt./@驱赶;,/vt./@迫使;,/n./@车道;,/n./@路;,/n./@抽球;,/n./@活动;,/n./@运动;,/n./@欲望;,/n./@比赛;
 drone ,/n./@無人機;,/n./@雄蜂;
-drool ,/n./@口水;
+drool ,/n./@口水;,/vi./@流口水;
 drunk ,/adj./@喝醉的@<drink的過去式>;
 dummy ,/adj./@假的;,/n./@傀儡;,/adj./@虛擬的;
 dutch ,/adj./@荷蘭的;,/adj./@荷蘭人的;,/adj./@荷蘭語的;
@@ -365,7 +372,9 @@ eager ,/adj./@渴望的;
 eagle ,/n./@鷹;
 early ,/adj./@早的;,/adj./@提前的;
 earth ,/n./@地球;
+edema ,/n./@水腫;
 edict ,/n./@詔書;
+eerie ,/adj./@怪異的;
 eigen ,/adj./@特征的;,/adj./@本征的;,/adj./@自身的;,/adj./@独特的;
 eight ,/n./@八;
 eject ,/v./@噴射;
@@ -377,6 +386,7 @@ elope ,/v./@私奔;,/v./@潛逃;
 elude ,/v./@逃避;,/v./@躲避;
 elves ,/n./<elf的復數>@精靈;
 embed ,/v./@嵌入;,/v./@插入;,/v./@栽种;
+ember ,/n./@餘火;,/n./@餘燼;
 emend ,/vt./@校訂;
 empty ,/adj./@空的;,/adj./@空白的;
 enemy ,/n./@敵人;
@@ -384,7 +394,7 @@ enjoy ,/v./@享受;,/v./@(使)愉快;
 enrol ,/v./@登記;
 ensue ,/vi./@接著發生;,/vi./@接踵而來;
 enter ,/v./@進入;
-entry ,/n./@進入;,/n./@入口;
+entry ,/n./@進入;,/n./@入口;,/n./@记录;,/n./@項目;,/n./@詞條;,/n./@帳目;
 epoch ,/n./@紀元;,/n./@時代;
 equal ,/adj./@相等的;
 equip ,/v./@裝備;,/v./@配備;
@@ -404,7 +414,7 @@ evoke ,/v./@喚起;
 exact ,/adj./@精確的;
 exalt ,/v./@提升;,/v./@贊揚;
 excel ,/v./@超過;,/v./@擅長;
-exert ,/v./@发揮;
+exert ,/v./@发揮;,/vt./@竭盡;
 exile ,/v./@流放;,/v./@放逐;
 exist ,/v./@存在;
 expel ,/v./@驅逐;
@@ -432,6 +442,7 @@ fight ,/v./@爭斗;,/v./@戰斗;
 final ,/adj./@最終的;
 first ,/adj./@第一的;
 firth ,/n./@峽灣;
+fishy ,/adj./@魚的;,/adj./@似魚的;,/adj./@可疑的;
 flail ,/v./@打;,/v./@用連枷打;
 flame ,/n./@火焰;
 flank ,/n./@側面;
@@ -470,9 +481,10 @@ fraud ,/n./@欺詐;
 freak ,/n./@怪人;,/adj./@奇怪的;
 fresh ,/adj./@新鮮的;
 frisk ,/vi./@蹦跳;
+Fritz ,/n./@德國人;
 front ,/n./@正面;,/n./@前線;
 frost ,/n./@霜;,/n./@霜凍;,/v./@結霜;
-froth ,/n./@泡沫;,/n./@泡;
+froth ,/n./@泡沫;,/n./@泡;,/vi./@起泡沫;,/vi./@吐白沫;
 frown ,/v./@皺眉;
 fruit ,/n./@水果;
 fudge ,/n./@軟糖;,/n./@胡説;,/n./@謊話;,/v./@捏造;,/v./@欺騙;
@@ -485,6 +497,7 @@ gamer ,/n./@玩家;
 gamut ,/n./@全音階;,/n./@整個範圍;
 gauge ,/v./@測量;
 gaunt ,/adj./@憔悴的;,/adj./@荒凉的;,/adj./@枯瘦的;
+geese ,/n.//pl./@鵝;
 genre ,/n./@類型;,/n./@流派;
 ghost ,/n./@鬼;,/n./@幽靈;
 giant ,/adj./@巨大的;,/n./@巨人;
@@ -505,6 +518,8 @@ gnome ,/n./@格言;
 gonna ,/aux./@會;
 goods ,/n./@商品;,/n./@貨物;
 goose ,/n./@鹅;
+gorge ,/n./@峽谷;,/n./@咽喉;
+gouge ,/vt./@鑿;,/vt./@挖;
 gourd ,/n./@葫蘆;
 grade ,/n./@年級;,/n./@等級;,/n./@評分;,/n./@成績;
 grail ,/n./@杯;,/n./@聖杯;
@@ -544,7 +559,7 @@ Harry ,/n./@哈利;
 harsh ,/adj./@嚴厲的;
 haste ,/n./@極速;,/n./@急忙;
 hasty ,/adj./@草率的;,/adj./@匆忙的;
-hatch ,/v./@孵化;,/n./@艙門;
+hatch ,/v./@孵化;,/n./@艙門;,/n./@艙口;
 haunt ,/v./@縈繞;,/v./@作祟;
 haven ,/n./@避難所;,/n./@港灣;
 havoc ,/n./@浩劫;,/n./@破坏;,/n./@毁坏;,/n./@混乱;
@@ -552,7 +567,8 @@ heady ,/adj./@興奮的;,/adj./@任性的;
 heart ,/n./@心;
 heave ,/v./@起伏;,/v./@舉起;,/v./@嘆氣;
 heavy ,/adj./@重的;,/adj./@嚴重的;,/adv./@劇烈地;
-hedge ,/n./@樹籬;
+hedge ,/n./@樹籬;,/n./@籬笆;,/n./@障礙;
+hefty ,/adj./@重的;,/adj./@健壮的;,/adj./@有力的;
 hello ,/int.//n./@你好;
 hence ,/adv./@因此;
 hepta ,/pref./@七;
@@ -572,6 +588,7 @@ hover ,/v./@盤旋;,/v./@翺翔;,/v./@徘徊;
 human ,/n./@人類;,/adj./@人類的;
 humid ,/adj./@湿的;,/adj./@潮濕的;
 humor ,/redirected./@target="humour";
+hunch ,/n./@預感;,/n./@直覺;,/vi./@弓身;,/vt./@隆起;
 hunky ,/adj./@结实性感的;
 hurry ,/n./@匆忙;,/v./@趕緊;
 ideal ,/adj./@理想的;
@@ -606,6 +623,7 @@ kneel ,/vi./@跪;
 knife ,/n./@刀;
 known ,/v./@知道;
 kodak ,/n./@柯達;
+kraut ,/n./@酸泡菜;,/n./@德國人;
 label ,/n./@標簽;,/n./@商標;
 labor ,/n./@勞動;
 lager ,/n./@貯藏啤酒;,/n./@窖藏啤酒;
@@ -624,6 +642,7 @@ lease ,/n./@租約;,/n./@租期;,/v./@出租;
 leash ,/n./@皮帶;,/v./@束縛;
 least ,/n./@至少;
 leave ,/v./@離開;
+ledge ,/n./@壁架;,/n./@岩架;,/n./@暗礁;,/n./@礦脈;
 leech ,/n./@水蛭;
 leery ,/adj./@机敏的;,/adj./@狡猾的;,/adj./@猜疑的;
 legal ,/adj./@合法的;
@@ -700,6 +719,7 @@ mogul ,/n./@大亨;,/n./@巨头;,/n./@显要人物;
 moist ,/adj./@潮濕的;
 money ,/n./@錢;
 month ,/n./@月;
+moose ,/n./@麋;,/n./@北美麋;,/n./@驼鹿;
 moral ,/adj./@道德的;,/n./@教訓;
 moron ,/n./@傻子;
 morph ,/n.v./@詞態;,/v./@改變;
@@ -774,6 +794,7 @@ pants ,/n./@褲子;
 param ,/n./@參數;
 parch ,/v./@烤;
 paren ,/n./@括弧;,/n./@括号;
+parka ,/n./@派克大衣;,/n./@有頭套的毛皮外套;
 parse ,/v./@解析;
 party ,/n./@派對;,/n./@黨派;
 paste ,/v./@粘貼;
@@ -834,7 +855,7 @@ prime ,/adj./@首要的;,/adj./@第一的;
 print ,/v./@打印;
 prior ,/adv./@優先的;,/adv./@在前;
 prism ,/n./@棱鏡;,/n./@棱柱;
-probe ,/v./@探測;
+probe ,/v./@探測;,/n./@探針;,/vt./@刺探;
 prone ,/adj./@俯伏的;
 proof ,/n./@證據;
 prose ,/n./@散文;
@@ -942,7 +963,8 @@ score ,/n./@得分;,/n./@成績;,/v./@得分;
 scorn ,/v./@蔑視;,/v./@嘲諷;
 scour ,/v./@沖刷;,/v./@擦;
 scowl ,/v./@愁容;
-scrap ,/n./@碎片;,/n./@廢棄物;
+scram ,/vi./@走開;,/vi./@滚开;
+scrap ,/n./@碎片;,/n./@廢棄物;,/n./@片段;
 scrub ,/v./@擦洗;,/n./@矮樹;
 scull ,/n./@短槳;,/n./@賽艇;,/v./@搖槳;,/v./@划船;
 segue ,/n./@繼續;
@@ -1008,7 +1030,7 @@ slice ,/n./@薄片;,/v./@切下;
 slick ,/adj./@光滑的;,/n./@平滑器;,/v./(使)@光滑;
 slide ,/v./@滑動;,/n./@幻燈片;
 slink ,/v./@潛逃;,/v./@早產;
-slope ,/n./@斜坡;
+slope ,/n./@斜坡;,/n./@山坡;,/n./@倾斜;,/vi./@倾斜;
 sloth ,/n./@懶惰;,/n./@樹懶;
 slump ,/v./@下降;,/n./@衰退;
 smack ,/n./@滋味;,/n./@少量;,/n./@掌掴;,/n./@猛然;
@@ -1081,11 +1103,12 @@ stamp ,/n./@郵票;
 stand ,/v./@站立;,/v./@忍受;,/v./@坐落;
 stare ,/v./@盯;
 start ,/v./@開始;
+stash ,/n./@藏匿處;,/vt./@貯藏;
 state ,/n./@國家;,/v./@陳述;,/v./@規定;,/v./@確立;
 stead ,/n./@代替;,/n./@用處;
 steal ,/v./@偷;
 steam ,/n./@蒸汽;,/v./@蒸;
-steep ,/adj./@陡峭的;,/adv./@急劇的;,/v./@浸泡;
+steep ,/adj./@陡峭的;,/adj./@急劇的;,/vt./@浸泡;,/vt./@浸透;
 steer ,/v./@駕駛;,/v./@操舵;
 stern ,/n./@船尾;,/adj./@嚴厲的;,/adj./@堅決的;
 stick ,/v./@粘貼;,/n./@枝;,/v./@紥;
@@ -1135,7 +1158,7 @@ syrup ,/n./@糖漿;,/n./@糖水;,/n./@果汁;
 table ,/n./@桌子;,/n./@表格;
 taboo ,/v./@禁忌;,/v./@禁止;,/n./@禁忌;
 tacit ,/adj./@緘默的;,/adj./@不言而喻的;,/adj./@心照不宣的;,/adj./@默許的;
-taiga ,/n./@針葉林區;
+taiga ,/n./@針葉林區;,/n./@針葉樹林地帶;
 tardy ,/adj./@緩慢的;,/adj./@遲緩的;
 tarot ,/n./@塔罗牌;
 taste ,/n./@味道;,/v./@品嘗;
@@ -1185,6 +1208,7 @@ Tokyo ,/n./@東京;
 tooth ,/n./@牙;
 topic ,/n./@主題;
 torch ,/n./@火炬;,/n./@手電筒;
+torso ,/n./@軀幹;,/n./@軀幹雕像;
 total ,/adj./@總的;
 totem ,/n./@圖騰;
 touch ,/v./@觸摸;
@@ -1240,7 +1264,7 @@ usage ,/n./@使用;,/n./@用法;
 usual ,/adj./@經常;,/adj./@尋常;
 usurp ,/v./@篡奪;
 utter ,/vt./@发出;,/v./@表達;,/v./@发射;
-vague ,/adj./@模糊的;
+vague ,/adj./@模糊的;,/adj./@不明確的;,/adj./@含糊的;,/adj./@不清楚的;
 valid ,/adj./@有效的;
 valor ,/n./@英勇;,/n./@勇猛;
 value ,/n./@價値;
