--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -48,7 +48,7 @@ always ,/adv./@總是;
 amoeba ,/n./@阿米巴;,/n./@变形虫;
 amount ,/n./@數量;
 ampere ,/n./@安培;
-amulet ,/n./@护身符;
+amulet ,/n./@护身符;,/n./@避邪物;
 analog ,/n./@模拟;,/n./@类似;
 anchor ,/n./@錨;,/v./@固定;
 anemic ,/adj./@無活力的;
@@ -58,7 +58,7 @@ anneal ,/vt./@退火;
 annual ,/adj./@每年的;
 answer ,/v.//n./@回答;
 anthem ,/n./@頌歌;,/n./@聖歌;,/n./@贊美詩;,/n./@贊美歌;
-antler ,/n./@鹿角;,/n./@茸角;
+antler ,/n./@鹿角;,/n./@茸角;,/n./@多叉鹿角;
 anyhow ,/adv./@無論如何;
 anyone ,/n./@任何人;
 anyway ,/adv./@不管怎樣;
@@ -80,6 +80,7 @@ arouse ,/v./@喚醒;,/v./@喚起;,/v./@激發;,/v./@引起;,/v./@鼓勵;
 arrear ,/n./@欠款;
 arrest ,/v./@逮捕;
 arrive ,/vi./@到达;,/vi./@达成;,/vi./@来临;,/vi./@得出;,/vi./@到场;
+artery ,/n./@動脈;,/n./@幹線;,/n./@要道;
 artful ,/adj./@狡猾的;,/adj./@巧妙的;
 artist ,/n./@藝術家;
 ascend ,/v./@上升;,/v./@攀升;
@@ -118,7 +119,7 @@ avowal ,/n./@聲明;,/n./@承認;,/n./@宣佈;
 babble ,/v./@喋喋不休;,/v./@含糊不清地說;
 baboon ,/n./@狒狒;
 backup ,/n./@備份;
-baffle ,/v./(使)@困惑;
+baffle ,/vt./@困擾;,/vt./@阻撓;,/vt./@難住;,/vt./@難倒;
 ballad ,/n./@歌謠;,/n./@民謠;,/n./@敘事歌謠;
 ballet ,/n./@芭蕾舞;
 ballot ,/v./@投票;,/n./@投票;
@@ -128,7 +129,7 @@ banish ,/v./@放逐;,/v./@驅逐;
 banner ,/n./@旗幟;,/n./@橫幅;,/n./@標語;
 banter ,/v./@戲虐;,/n./@打趣;,/vi./@談笑;,/vt./@取笑;
 barley ,/n./@大麥;
-barrel ,/n./@桶;,/n./@管;
+barrel ,/n./@桶;,/n./@管;,/n./@槍管;,/n./@砲筒;
 barren ,/adj./@不育的;,/adj./@貧瘠的;
 barter ,/n./@易貨貿易;
 basalt ,/n./@玄武岩;
@@ -138,6 +139,7 @@ battle ,/n./@戰爭;
 bawdry ,/n./@猥褻;,/n./@賣淫;
 bazaar ,/n./@集市;
 beacon ,/n./@燈塔;
+beaten ,/adj./@被打敗的;,/adj./@錘平的;,/adj./@踩出來的;,/adj./@踏硬的;
 beauty ,/n./@美女;
 become ,/v./@變成;
 before ,/v./@前于;
@@ -229,6 +231,7 @@ carnal ,/adj./@肉體的;,/adj./@肉慾的;,/adj./@淫蕩的;,/adj./@性慾的;
 carpet ,/n./@地毯;
 carrot ,/n./@胡蘿蔔;
 carton ,/n./@紙箱;
+casket ,/n./@小箱;,/n./@小盒;,/n./@骨灰盒;,/n./@棺材;
 castle ,/n./@城堡;
 casual ,/adj./@隨便的;,/adj./@偶然的;,/adj./@随意的;,/adj./@粗略的;,/adj./@漫不经心的;,/adj./@轻松的;,/n./@临时工;,/adj./@临时的;
 cattle ,/n./@牛;
@@ -267,7 +270,7 @@ circus ,/n./@馬戲團;
 classy ,/adj./@優等的;,/adj./@上等的;,/adj./@漂亮的;
 clause ,/n./@從句;
 claver ,/n./@閑話;
-clench ,/v./@緊握;
+clench ,/v./@緊握;,/vt./@握緊;,/vt./@抓緊;,/vt./@咬緊;
 clever ,/adj./@聰明的;
 cliche ,/n./@陈词滥调;,/adj./@陈腐的;,/n./@铅版;
 client ,/n./@客戶;,/n./@用户;,/n./@顧客;
@@ -298,13 +301,14 @@ comply ,/v./@遵守;
 concur ,/v./@同意;,/v./@一致;
 condom ,/n./@避孕套;
 confer ,/v./@授予;
+convex ,/adj./@凸面的;
 convey ,/v./@傳達;
 convoy ,/v./@護航;,/v./@護送;,/v./@護衛;
 cooker ,/n./@廚具;
 cookie ,/n./@曲奇;,/n./@餅干;
 coolie ,/n./@苦力;
 copper ,/n./@銅;
-cordon ,/n./@警戒綫;,/n./@綬帶;
+cordon ,/n./@警戒綫;,/n./@綬帶;,/n./@哨兵線;,/n./@封鎖線;
 corner ,/n./@角落;
 corpse ,/n./@屍體;
 corpus ,/n./@語料庫;,/n./@文集;,/n./@本金;
@@ -350,7 +354,8 @@ dazzle ,/v./@耀眼;
 dealer ,/n./@商人;,/n./@販子;
 debase ,/vt./@降低;,/vt./@貶值;,/vt./@摻雜;
 debate ,/v./@辯論;,/n./@爭論;
-debris ,/n./@殘骸;
+debris ,/n./@殘骸;,/n./@碎片;
+debunk ,/vt./@揭穿;,/vt./@驳斥;,/vt./@拆穿;
 decade ,/n./@十年;
 deceit ,/n./@欺騙;,/n./@欺詐;,/n./@謊言;
 decent ,/adj./@正派的;
@@ -414,7 +419,7 @@ disuse ,/v./@廢止;,/n./@廢止;
 divert ,/vt./@轉向;,/vt./@轉移;,/vt./@娛樂;
 divide ,/v./@拆分;
 divine ,/adj./@神聖的;
-doctor ,/n./@醫生;,/n./@博士;
+doctor ,/n./@醫生;,/n./@博士;,/vt./@治療;,/vt./@修理;,/vt./@竄改;
 dollar ,/n./@美元;
 domain ,/n./@領域;,/n./@領土;
 domine ,/n./@主人;,/n./@老爺;
@@ -444,6 +449,7 @@ elapse ,/v./@消逝;
 elated ,/adj./@興髙采烈的;
 eleven ,/n./@十一;
 elicit ,/v./@引出;,/v./@引起;,/v./@抽出;,/v./@引發;,/v./@誘發;
+elixir ,/n./@煉金藥;,/n./@長生不老藥;,/n./@靈丹妙藥;
 embark ,/v./@從事;,/v./@著手;
 emblem ,/n./@象征;,/n./@标志;,/n./@徽章;,/n./@标记;
 embryo ,/n./@胚胎;,/n./@胚芽;,/n./@萌芽;,/n./@初期;,/n./@胚胎階段;,/n./@萌芽階段;
@@ -498,7 +504,7 @@ exotic ,/adj./@外國的;
 expand ,/v./@擴大;
 expect ,/v./@期望;,/v./@預料;
 expert ,/n./@專家;
-expire ,/v./@終止;,/v./@到期;,/v./@断气;
+expire ,/v./@終止;,/v./@到期;,/v./@断气;,/vi./@死亡;
 expose ,/v./@暴露;
 extant ,/adj./@現存的;,/adj./@顯著地;
 extend ,/v./@擴充;,/v./@延展;
@@ -520,6 +526,7 @@ father ,/n./@父親;
 faucet ,/n./@龍頭;,/n./@旋塞;,/n./@插口;
 fealty ,/n./@忠誠;
 feeble ,/adj./@虛弱的;
+feisty ,/adj./@煩躁不安的;,/adj./@爭強好勝的;,/adj./@活躍的;,/adj./@好斗的;,/adj./@易怒的;
 fellow ,/n./@家夥;
 felony ,/n./@重罪;
 fervid ,/adj./@热情的;,/adj./@热烈的;,/adj./@强烈的;,/adj./@激情的;
@@ -534,6 +541,7 @@ filthy ,/adj./@肮脏的;
 finish ,/v./@完成;
 finite ,/adj./@有限的;
 fiscal ,/adj./@财政的;
+fitful ,/adj./@斷續的;,/adj./@斷斷續續的;,/adj./@反覆無常的;
 fixate ,/v./@註視;,/v./@固定;
 fizzle ,/n./@失敗;,/v./@萎靡;
 flabby ,/adj./@鬆弛的;,/adj./@軟弱的;
@@ -592,7 +600,7 @@ gentle ,/adj./@輕柔的;
 gently ,/adj./@輕柔的;
 gerund ,/n./@動名詞;
 ghetto ,/n./@贫民区;,/n./@貧民窟;,/n./@少数族裔聚居区;,/n./@犹太人居住区;
-giggle ,/v./@咯咯笑;
+giggle ,/v./@咯咯笑;,/n./@咯咯笑;
 ginger ,/n./@薑;
 glance ,/v./@掃視;,/v./@瞥;
 glider ,/n./@滑翔機;
@@ -628,7 +636,7 @@ handle ,/n./@把手;,/v./@處理;,/v./@操作;
 happen ,/v./@发生;
 harass ,/v./@騷擾;,/v./@煩擾;
 harlot ,/n./@娼妓;
-harrow ,/n./@耙;,/vt./@耙;,/vt./@煩擾;
+harrow ,/n./@耙;,/vt./@耙;,/vt./@煩擾;,/vt./@折磨;
 hassle ,/n./@麻煩;,/n./@困難;,/v./@爭辯;
 hasten ,/v./@加速;
 hatred ,/n./@仇恨;
@@ -699,6 +707,7 @@ insect ,/n./@昆蟲;
 insert ,/v./@插入;
 inside ,/prep./在...@內;
 insist ,/v./@堅持;
+instil ,/vt./@滴注;,/vt./@逐漸灌輸;
 insult ,/v./@侮辱;
 insure ,/v./@確保;
 intact ,/adj./@完整的;
@@ -805,7 +814,7 @@ matter ,/n./@問題;,/n./@事情;
 mature ,/adj./@成熟的;
 mayday ,/n./@求救信號;
 meadow ,/n./@草地;,/n./@牧場;
-meddle ,/v./@干預;,/v./@管閑事;
+meddle ,/v./@干預;,/v./@管閑事;,/vi./@干涉;
 median ,/adj./@中間的;
 medium ,/n./@手段;,/n./@媒體;
 mellow ,/adj./@圓潤的;,/adj./@柔和的;,/adj./@成熟的;
@@ -841,7 +850,8 @@ Monday ,/n./@星期一;
 monkey ,/n./@猴子;
 morale ,/n./@士氣;,/n./@斗志;
 morbid ,/adj./@病態的;,/adj./@消極的;,/adj./@恐怖的;
-morose ,/adj./@鬱悶的;,/adj./@孤僻的;
+morgue ,/n./@陳屍所;,/n./@停尸房;,/n./@太平间;,/n./@資料室;
+morose ,/adj./@鬱悶的;,/adj./@孤僻的;,/adj./@陰鬱的;,/adj./@陰沉的;
 mortal ,/adj./@凡人的;,/adj./@會死的;
 mosque ,/n./@清真寺;
 mother ,/n./@母親;
@@ -907,6 +917,7 @@ oracle ,/n./@神諭;
 orange ,/n./@橘子;
 orchid ,/n./@蘭花;,/n./@淡紫色;,/adj./@淡紫色的;
 ordain ,/v./@命令;,/v./@任命;,/v./@注定;
+ordeal ,/n./@磨难;,/n./@苦難;,/n./@折磨;,/n./@嚴峻考驗;
 orgasm ,/n./@性髙潮;
 orient ,/adj./@東方的;
 origin ,/n./@起源;
@@ -914,6 +925,8 @@ ornate ,/adj./@華麗的;,/adj./@裝飾的;,/adj./@华美的;,/adj./@豪华的;
 orphan ,/n./@孤兒;
 others ,/pron./@其他人;
 ouster ,/n./@驅逐;,/n./@罷黜;,/n./@剝奪;
+outlaw ,/n./@亡命之徒;,/vt./@禁止;,/vt./@放逐;
+outlet ,/n./@出口;,/n./@出水口;,/n./@排氣口;,/n./@出路;,/n./@銷路;
 outset ,/n./@開始;
 overdo ,/v./@過火;,/v./@誇張;
 pablum ,/n./@嬰兒麥片;
@@ -923,7 +936,7 @@ paddle ,/v./@劃槳;,/n./@槳;,/v./@攪;,/vi./@涉水;,/vi./@蹼游;
 palace ,/n./@宮殿;
 palate ,/n./@味覺;
 papist ,/n./@天主教徒;
-parade ,/n./@遊行;
+parade ,/n./@遊行;,/vi./@遊行;,/vi./@列隊行進;
 parcel ,/v./@分配;,/n./@包裹;
 pardon ,/v./@寬恕;
 parent ,/n./@父母;
@@ -945,6 +958,7 @@ peanut ,/n./@花生;
 pebble ,/n./@卵石;
 peddle ,/vt./@兜售;,/vt./@宣传;,/vt./@非法贩卖;,/vt./@散播;
 peking ,/n./@北京;
+pelvis ,/n./@骨盆;
 pencil ,/n./@鉛筆;
 people ,/n./@人;
 pepper ,/n./@胡椒;
@@ -1031,6 +1045,7 @@ raisin ,/n./@葡萄乾;
 ramble ,/v./@漫步;,/n./@漫步;
 random ,/adj./@隨機的;,/adj./@任意的;
 ranger ,/n./@巡邏員;
+rappel ,/v./@援繩下降;,/v./@援繩而下;
 raptor ,/n./@肉食鸟;,/n./@猛禽;,/n./@猛龙;
 rarely ,/adj./@不經常的;
 rascal ,/n./@流氓;,/n./@惡棍;,/n./@無賴;
@@ -1040,6 +1055,7 @@ ratify ,/v./@批准;,/v./@認可;
 ration ,/n./@配給;,/n./@定量;,/n./@口糧;
 rattle ,/n./@拨浪鼓;,/n./@响板;,/n./@角质环;,/vi./@乒乓响;
 ravage ,/v./@毀壞;,/v./@破壞;,/n./@破壞;
+ravine ,/n./@溝壑;,/n./@深谷;
 really ,/adv./@眞的;,/adv./@眞實地;
 realty ,/n./@房地產;,/n./@不動產;
 reason ,/n./@原因;
@@ -1090,7 +1106,7 @@ resent ,/vt./@怨恨;,/v./@忿恨;
 reside ,/v./@居住;,/v./@存在;
 resign ,/v./@辭職;
 resist ,/v./@拒絕;
-resort ,/v./@求助;
+resort ,/v./@求助;,/n./@名勝;,/vi./@憑藉;
 result ,/n./@結果;,/n./@後果;,/n./@效果;
 resume ,/v./@繼續;,/n./@摘要;
 retail ,/v./@零售;
@@ -1129,7 +1145,7 @@ rubber ,/n./@橡膠;,/n./@橡皮;
 rubble ,/n./@碎石;,/n./@碎磚;
 rudder ,/n./@舵;
 ruffle ,/v./@弄皺;,/v./@惹怒;,/v./@擾亂;
-rumble ,/n./@隆隆聲;,/v./@隆隆響;
+rumble ,/n./@隆隆聲;,/v./@隆隆響;,/n./@咕噥;,/vi./@嘟囔;
 sacred ,/adj./@神聖的;
 saddle ,/n./@馬鞍;
 safari ,/n./@旅行;,/n./@狩獵;,/n./@遠征;
@@ -1187,6 +1203,7 @@ severe ,/adj./@嚴峻的;
 sexual ,/adj./@性的;
 shabby ,/adj./@破舊的;,/adj./@卑鄙的;,/adj./@吝嗇的;,/adj./@低劣的;
 shadow ,/n./@影子;
+shaman ,/n./@萨满;,/n./@黃教僧;,/n./@黃教巫醫;
 shaver ,/n./@剃須刀;
 sheath ,/n./@鞘;,/n./@护套;
 shield ,/n./@防護;,/n./@盾;
@@ -1217,6 +1234,8 @@ skinny ,/adj./@機密的;
 sledge ,/n./@雪橇;,/n./@大錘;
 sleepy ,/adj./@欲睡的;,/adj./@困乏的;
 sleeve ,/n./@袖子;
+sleigh ,/n./@雪橇;
+sleuth ,/n./@大獵犬;,/n./@大警犬;,/n./@偵探;
 slight ,/adj./@稍微的;
 slogan ,/n./@標語;
 slouch ,/vi./@低头垂肩地坐着;,/vi./@无精打采地站着;
@@ -1265,7 +1284,7 @@ squall ,/v./@嚎啕;,/v./@尖叫;
 square ,/adj./@平方的;,/adj./@方形的;,/n./@廣場;,/adj./@直角的;
 squash ,/v./@鎮壓;
 squawk ,/v./@抗議;,/v./@訴苦;
-squeak ,/v./@告密;,/v./@吱吱叫;
+squeak ,/v./@告密;,/v./@吱吱叫;,/vi./@嘎吱嘎吱響;,/n./@吱吱聲;,/n./@嘎吱嘎吱聲;
 squeal ,/v./@告密;,/v./@尖叫;
 squint ,/v./@斜視;
 squire ,/n./@鄉紳;,/n./@侍從;,/n./@地主;,/n./@地方法官;
@@ -1280,14 +1299,14 @@ statue ,/n./@雕像;
 steady ,/adj./@平穩的;,/adj./@穩健的;
 stench ,/n./@惡臭;
 stereo ,/n./@立體聲;
-sticky ,/adj./@棘手的;
-stifle ,/v./@扼殺;,/v./@窒息;,/v./@藏匿;
+sticky ,/adj./@棘手的;,/adj./@黏的;,/adj./@黏糊糊的;,/adj./@濕熱的;,/adj./@悶熱的;
+stifle ,/v./@扼殺;,/v./@窒息;,/v./@藏匿;,/vt./@悶死;
 stigma ,/n./@恥辱;,/n./@污名;,/n./@污點;,/n./@柱頭;,/n./@眼點;
 stocky ,/adj./@矮胖的;
 stoned ,/v./@擲石頭;,/adj./@去核的;,/adj./@醉酒的;
 storey ,/n./@樓層;
 strain ,/v./@抑制;
-streak ,/n./@條紋;,/v./@飛跑;
+streak ,/n./@條紋;,/v./@飛跑;,/n./@光線;,/n./@礦脈;
 stream ,/n./@水流;
 street ,/n./@街道;
 stress ,/v./@強調;,/n./壓力;
@@ -1341,8 +1360,10 @@ tattoo ,/n./@紋身;
 tavern ,/n./@酒館;,/n./@客棧;
 teapot ,/n./@茶壺;
 temper ,/n./@脾氣;,/n./@回火;
+temple ,/n./@神殿;,/n./@寺廟;,/n./@太陽穴;
 tenant ,/n./@承租人;,/n./@房客;,/n./@居住者;,/n./@租户;
 tender ,/adj./@溫柔的;
+tendon ,/n./@腱;
 tennis ,/n./@網球;
 tenure ,/n./@終身職位;,/n./@任期;
 terran ,/n./@人族;,/n./@地球人;
@@ -1381,7 +1402,8 @@ topple ,/v./@推倒;,/v./@顛覆;,/vi./@倒下;
 torpor ,/n./@冷漠;
 toward ,/prep./@向;
 tragic ,/adj./@悲慘的;
-trance ,/n./@怳惚;
+trance ,/n./@怳惚;,/n./@恍惚;,/n./@出神;,/n./@入定;
+trauma ,/n./@外傷;,/n./@創傷;,/n./@傷口;
 travel ,/n./@旅行;
 treaty ,/n./@條約;
 tremor ,/n./@震動;
@@ -1393,6 +1415,7 @@ trifle ,/n./@瑣事;
 triple ,/adj.//pref./@三的;
 trivet ,/n./@三脚铁架;,/n./@三脚台架;
 trivia ,/n./@瑣事;
+trophy ,/n./@戰利品;,/n./@獎品;,/n./@勝利紀念品;
 trough ,/n./@水槽;,/n./@槽;,/n./@波谷;,/n./@低谷;
 tumble ,/v./@跌倒;,/v./@摔跤;,/v./@打滾;
 tumult ,/n./@混乱;,/n./@骚乱;,/n./@喧闹;,/n./@喧哗;,/#syn/@turmoil;
@@ -1427,6 +1450,7 @@ uppity ,/adj./@傲慢的;,/adj./@自負的;,/adj./@自大的;
 upward ,/adv./@向上;,/adj./@向上的;
 urbane ,/adj./@文雅的;,/adj./@有禮貌的;,/adj./@都市化的;
 urgent ,/adj./@緊迫的;,/adj./@緊急的;
+ursine ,/adj./@熊的;,/adj./@像熊的;
 useful ,/n.//adj./@有用的;
 utmost ,/adj./@極度的;,/n./@極限;
 utopia ,/n./@烏托邦;
@@ -1468,6 +1492,7 @@ waffle ,/n./@華夫;,/v./@胡扯;,/v./@閒聊;
 waiter ,/n./@侍者;,/n./@服務員;
 wallet ,/n./@錢包;
 wander ,/vi./@游荡;,/vi./@闲逛;,/vt./@游荡;,/n./@闲逛;,/vi./@漫步;,/vi./@游离;,/vi./@走神;,/vi./@离题;,/vi./@走散;,/vi./@蜿蜒;,/vi./@乱摸;
+warden ,/n./@管理員;,/n./@主管;,/n./@長官;
 wasn't ,/v./@不是;
 weaken ,/v./@削弱;
 weapon ,/n./@武器;
