--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -2,6 +2,7 @@ abandon ,/v./@抛棄;
 abiding ,/adj./@持久的;
 ability ,/n./@能力;
 abolish ,/v./@廢除;,/v./@取消;
+abscond ,/vi./@潛逃;,/vi./@逃亡;,/vi./@逃走;
 absence ,/n./@缺席;
 absolve ,/v./@解除責任;
 abstain ,/v./@自我克制;
@@ -15,7 +16,7 @@ acquire ,/v./@習得;
 acrobat ,/n./@雜技演員;,/n./@特技演員;
 acronym ,/n./@首字母縮略詞;
 actress ,/n./@女演員;
-adamant ,/adj./@固執的;
+adamant ,/adj./@固執的;,/adj./@堅定的;
 address ,/n./@地址;,/n./@演講;,/n./@致辭;,/v./@從事;
 adjourn ,/v./@延期;,/vt./@中止;,/vt./@休會;,/vt./@休庭;
 adjunct ,/n./@附屬物;
@@ -56,7 +57,7 @@ ancient ,/adj./@古代的;
 android ,/n./@機器人;
 angular ,/adj./@角狀的;
 animate ,/adj./@活的;
-anomaly ,/n./@異常;
+anomaly ,/n./@異常;,/n./@反常;
 another ,/adj./@另一個;
 antique ,/n./@古董;,/adj./@古老的;
 antonym ,/n./@反義詞;
@@ -76,6 +77,7 @@ archive ,/n./@檔案館;,/n./@檔案文件;,/v./@存档;
 arduous ,/adj./@努力的;
 arousal ,/n./@喚醒;,/n./@覺醒;,/n./@激勵;
 arrange ,/v./@安排;
+arsenal ,/n./@軍械庫;,/n./@兵工廠;,/n./@武器储备;,/n./@武器庫;
 article ,/n./@文章;
 artisan ,/n./@工匠;,/n./@技工;
 ascetic ,/adj./@苦行的;
@@ -127,10 +129,13 @@ bereave ,/vt./使@丧失;,/vt./使@失去;
 besides ,/adv.//prep./@除此之外;
 besiege ,/v./@圍;,/v./@包圍;,/v./@圍困;,/v./@圍攻;
 between ,/prep./@在之間;
+bewitch ,/vt./@施魔術於;,/vt./@施魔法於;
 bicycle ,/n./@自行車;,/n./@雙輪車;
 billion ,/n./@十億;
 biology ,/n./@生物學;
+bipolar ,/adj./@有兩極的;,/adj./@躁郁的;
 biscuit ,/n./@餅干;
+bivouac ,/n./@露營;,/n./@露宿;
 bizarre ,/adj./@奇異的;
 bladder ,/n./@膀胱;
 blanket ,/n./@地毯;
@@ -148,6 +153,7 @@ bonjour ,/n./@你好;
 booklet ,/n./@小冊子;
 boredom ,/n./@厭倦;
 borough ,/n./@區;,/n./@自治市鎭;
+boulder ,/n./@巨石;,/n./@大圓石;,/n./@巨礫;
 bouquet ,/n./@花束;,/n./@酒香;
 bracket ,/n./@括號;
 bravado ,/n./@虛張聲勢;,/n./@冒險;
@@ -166,6 +172,7 @@ buffalo ,/n./@水牛;,/n./@野牛;,/n./@兩栖坦克;
 buffoon ,/n./@醜角;,/n./@滑稽演員;
 bulimia ,/n./@贪食症;
 burglar ,/n./@竊賊;
+burrito ,/n./@玉米粉卷饼;
 bustard ,/n./@大鴇;
 butcher ,/n./@屠夫;
 buttock ,/n./@半邊臀部;
@@ -176,6 +183,7 @@ canvass ,/vt./@征求;,/vt./@兜售;,/vt./@拉选票;
 capable ,/adj./@潛在的;,/adj./@可能的;
 capella ,/n./@教堂;
 capital ,/n./@首都;,/n./@資本;,/adj./@死刑的;
+capsize ,/v./@傾覆;,/v./@翻覆;
 capsule ,/n./@胶囊;,/n./@航天舱;,/n./@瓶封;
 captain ,/n./@船長;
 caption ,/n./@標題;
@@ -213,7 +221,7 @@ chimney ,/n./@煙囪;
 chinese ,/n./@漢語;
 Chinese ,/n./@漢語;
 chowder ,/n./@雜燴;
-chronic ,/adj./@慢性的;,/adj./@長期的;
+chronic ,/adj./@慢性的;,/adj./@長期的;,/adj./@久病的;,/adj./@習慣性的;
 chuckle ,/v./@輕笑;
 circuit ,/n./@逥路;,/n./@巡逥;,/n./@電路;
 clamber ,/v./@攀登;
@@ -251,6 +259,7 @@ complex ,/adj./@復雜的;
 compose ,/v./@組成;,/v./@譜@曲;
 compost ,/v./@堆肥;,/n./@堆肥;,/n./@混合物;
 compute ,/v./@計算;
+concave ,/adj./@凹的;,/adj./@凹面的;
 conceal ,/v./@隱藏;
 concede ,/v./@讓步;,/v./@認輸;,/v./@讓予;
 conceit ,/n./@自負;,/v./@狂想;
@@ -307,6 +316,7 @@ courage ,/n./@勇氣;
 courier ,/n./@快遞員;,/n./@情報員;,/n./@通訊員;
 cramped ,/adj./@狹窄的;
 crapper ,/n./@厠所;
+crevice ,/n./@裂縫;,/n./@裂隙;
 crimson ,/n./@深紅色;,/adj./@深紅色的;
 cripple ,/n./@跛子;,/v./@削弱;,/v./@使跛;
 crooked ,/adj./@彎曲的;
@@ -315,9 +325,11 @@ crucify ,/v./@在十字架上釘死;
 cruelly ,/adv./@殘忍地;
 cruelty ,/n./@殘忍;
 crumple ,/v./@弄皺;
-cryptic ,/adj./@神秘的;
+cryptic ,/adj./@神秘的;,/adj./@隱祕的;
+cryptid ,/n./@神秘生物;
 crystal ,/n./@鑽石;
 cubicle ,/n./@小隔間;
+culprit ,/n./@罪犯;,/n./@犯错的人;,/n./@肇事者;,/n./@问题的根源;
 culture ,/n./@文化;
 curious ,/adj./@好奇的;
 current ,/adj./@當今;
@@ -369,7 +381,7 @@ destine ,/v./@註定;,/v./@預定;
 destiny ,/n./@命運;,/n./@天意;,/n./@定數;
 destroy ,/v./@摧毀;
 develop ,/v./@发展;
-deviate ,/vi./@偏离;,/vi./@背离;
+deviate ,/vi./@偏离;,/vi./@背离;,/vi./@脫離;,/vt./@使脫軌;
 diagram ,/n./@圖表;
 dialect ,/n./@方言;
 dialogo ,/n./@對話;
@@ -418,6 +430,7 @@ dustbin ,/n./@垃圾桶;,/n./@垃圾箱;
 dwindle ,/v./@减少;,/v./@变小;,/v./@缩小;
 dynamic ,/adj./@動態的;
 earnest ,/adj./@認眞的;
+ebonite ,/n./@硬化橡皮;,/n./@硬橡膠;
 economy ,/n./@經濟;
 ecstasy ,/n./@狂喜;,/n./@入迷;,/n./@忘形;
 edifice ,/n./@大廈;
@@ -428,7 +441,7 @@ elation ,/n./@興髙采烈;
 element ,/n./@元素;,/n./@要素;
 elevate ,/v./@提升;,/v./@提髙;
 elusion ,/n./@逃避;,/n./@回避;
-elusive ,/adj./@躲閃的;
+elusive ,/adj./@躲閃的;,/adj./@逃避的;,/adj./@躲避的;
 emanate ,/v./@放射;
 embassy ,/n./@使館;
 embrace ,/v./@擁抱;,/v./@包含;
@@ -490,12 +503,13 @@ fantasy ,/n./@幻想;
 faraway ,/adj./@很遠的;
 fascist ,/n./@法西斯分子;
 fashion ,/n./@時尚;
-fatigue ,/n./@疲勞;
+fatigue ,/n./@疲勞;,/n./@勞累;
 fatuous ,/adj./@愚笨的;,/adj./@昏庸的;,/adj./@發呆的;
 feather ,/n./@羽毛;
 feature ,/n./@特徴;,/n./@相貌;,/n./@特寫;
 feeling ,/n./@感觉;,/n./@知觉;,/n./@感情;
 feigned ,/adj./@假的;
+femoral ,/adj./@股骨的;,/adj./@大腿的;
 fertile ,/adj./@肥沃的;,/adj./@富饒的;
 fervent ,/adj./@强烈的;,/adj./@热烈的;
 fervour ,/n./@热忱;
@@ -511,6 +525,7 @@ flatten ,/v./@變平;
 flatter ,/vt./@奉承;
 flexure ,/n./@褶皺;,/n./@彎曲;,/n./@彈性;,/n./@柔性;
 flicker ,/v./@閃耀;
+foliage ,/n./@葉子;,/n./@葉飾;
 foolish ,/adj./@愚蠢的;
 footage ,/n./@錄像;,/n./@連續鏡頭;
 foreign ,/adj./@外國的;
@@ -540,7 +555,7 @@ furious ,/adj./@狂怒的;
 furnish ,/vt./@配置;,/vt./@裝備;,/vt./@供應;,/vt./@提供;
 further ,/v./@促進;,/adv./@進一步;,/adj./@更遠的;
 furtive ,/adj./@鬼鬼祟祟的;
-gallant ,/adj./@勇敢的;
+gallant ,/adj./@勇敢的;,/adj./@英勇的;,/adj./@豪俠的;,/adj./@華麗的;
 gallery ,/n./@畫廊;
 gambler ,/n./@賭徒;
 garbage ,/n./@垃圾;
@@ -604,7 +619,7 @@ honesty ,/n./@誠實;,/n./@正直;
 hopeful ,/adj./@充滿希望的;
 horizon ,/n./@地平綫;,/n./@视野;
 hostage ,/n./@人質;
-hostile ,/adj./@懷敵意的;
+hostile ,/adj./@懷敵意的;,/adj./@敵方的;
 however ,/conj.//adv./@然而;,/adv./@可是;
 hundred ,/n./@百;
 husband ,/n./@丈夫;,/v./@節約使用;
@@ -624,6 +639,7 @@ implore ,/v./@哀求;,/v./@懇求;
 impress ,/v./@銘記;
 improve ,/v./@改善;
 impulse ,/n./@衝動;,/n./@脈衝;
+incisor ,/n./@門牙;,/n./@前齒;
 incline ,/v./@贊同;,/v./@傾斜;
 include ,/v./@包括;
 indulge ,/v./@縱容;,/v./@放任;
@@ -644,6 +660,7 @@ inspire ,/v./@鼓舞;
 install ,/v./@安裝;
 instant ,/adj./@立卽的;
 instead ,/v./@代替;
+instill ,/vt./@逐漸灌輸;
 integer ,/n./@整數;
 intense ,/adj./@強烈的;
 interim ,/adj./@臨時的;,/adj./@暫時的;,/adj./@中間的;
@@ -654,6 +671,7 @@ invoice ,/n./@發票;
 involve ,/v./@卷入;
 inwards ,/adv./@內向地;
 isolate ,/v./@孤立;
+isotope ,/n./@同位素;
 iterate ,/v./@叠代;
 January ,/n./@一月;
 jasmine ,/n./@茉莉;,/n./@淡黃色;
@@ -681,6 +699,7 @@ lateral ,/adj./@橫向的;,/adj./@側向的;,/adj./@侧面的;
 lattice ,/n./@晶格;,/n./@框架;,/n./@結構;,/n./@格子;
 launder ,/v./@洗滌;,/v./@清洗;
 laundry ,/n./@洗衣店;
+leaflet ,/n./@傳單;
 lecture ,/n./@講座;
 leecher ,/n./@吸血騾;,/n./@吸血鬼;
 leisure ,/adj./@空閑的;,/n./@閑暇;
@@ -812,9 +831,12 @@ optimal ,/adj./@最佳的;
 orchard ,/n./@果園;
 ordinal ,/adj./@顺序的;,/adj./@依次的;,/n./@序数;
 organic ,/adj./@有機的;
+orifice ,/n./@孔;,/n./@口;,/n./@洞;
+osmotic ,/adj./@渗透的;
 ossuary ,/n./@藏屍堂;
 outcome ,/n./@結果;
 outdoor ,/adj./@室外的;,/adj./@野外的;,/adj./@露天的;
+outland ,/n./@邊境地區;,/n./@邊遠地區;,/n./@外國;
 outline ,/n./@大綱;,/n./@轮廓;,/n./@略图;
 outlook ,/n./@觀點;,/n./@展望;,/n./@前景;
 outpost ,/n./@前哨;,/n./@边远居民点;
@@ -823,6 +845,7 @@ outrank ,/v./@髙于;
 outside ,/prep./在...之@外;
 overall ,/adj./@總的;,/adj./@全面的;
 overlap ,/v./@重叠;,/v./@重复;
+oxidize ,/vt./@氧化;
 pacific ,/adj./@和平的;
 package ,/n./@包裹;,/n./@包;
 paladin ,/n./@騎士;,/n./@遊俠;
@@ -861,6 +884,7 @@ perform ,/v./@表演;,/v./@實施;,/v./@展示;
 perfume ,/n./@香水;
 perhaps ,/adv./@也許;,/adv./@可能;
 perjury ,/n./@僞證;,/n./@偽誓;,/n./@背信棄義;
+perplex ,/vt./@困惑;
 persist ,/v./@堅持;,/v./@固執;
 pertain ,/vi./@屬於;,/vi./@關於;,/vi./@適合;
 perturb ,/vt./@煩擾;
@@ -880,9 +904,11 @@ placard ,/n./@標語牌;,/n./@海報;,/v./@張貼;,/n./@招貼;
 placate ,/v./@撫慰;,/v./@懷柔;,/v./@和解;
 placebo ,/n./@安慰剂;,/n./@晚祷词;
 plateau ,/n./@髙原;,/n./@髙地;
+pleural ,/adj./@肋膜的;,/adj./@胸膜的;
 plumber ,/n./@管道工;
 plummet ,/vi./@坠落;,/vi./@跌落;
 plunder ,/v./@掠奪;,/v./@搶劫;
+poacher ,/n./@偷獵者;
 podcast ,/n./@播客;
 pointer ,/n./@指針;
 pollute ,/v./@污染;
@@ -909,7 +935,7 @@ predict ,/v./@預言;
 preempt ,/v./@先佔;,/v./@先取;
 preface ,/n./@序言;,/n./@前言;,/n./@引语;,/n./@开场白;
 prelude ,/n./@序言;,/n./@序曲;,/n./@前兆;
-premise ,/v./@引出;,/v./@预先提出;
+premise ,/v./@引出;,/v./@预先提出;,/n./@假定;,/n./@前提;
 premium ,/n./@保險費;,/n./@獎金;,/n./@津贴;
 prepare ,/v./@准備;
 present ,/n./@現在;,/v./@提出;,/v./@介紹;,/v./@呈現;,/v./@出席;
@@ -1022,6 +1048,7 @@ revenue ,/n./@稅;
 reverse ,/v./@顛倒;,/n./@相反;,/adj./@反面的;
 revolve ,/v./@旋轉;
 rhombus ,/n./@菱形;
+ribcage ,/n./@胸廓;
 rickety ,/adj./@搖晃的;,/adj./@虛弱的;
 riposte ,/v./@還擊;,/v./@回擊;,/n./@回擊;
 rivalry ,/n./@競爭;,/n./@對抗;
@@ -1032,6 +1059,8 @@ romance ,/n./@浪漫;
 routine ,/n./@常规;,/n./@例行程序;,/adj./@例行的;,/adj./@常规的;,/adj./@平淡的;,/adj./@乏味的;
 royalty ,/n./@王室;,/n./@版稅;,/n./@王權;,/n./@專利稅;
 rubbish ,/n./@垃圾;
+rummage ,/vt./@搜查;,/vi./@翻找;,/n./@翻找;
+rupture ,/vt./@破裂;,/vt./@断绝;,/n./@破裂;,/n./@断绝;
 sabbath ,/n./@安息日;
 salvage ,/v./@搶救;,/v./@打撈;
 sarcasm ,/n./@諷刺;,/n./@嘲笑;
@@ -1053,6 +1082,7 @@ scratch ,/v./@抓;,/v./@搔;,/v./@劃;
 screech ,/v./@尖叫;
 scumbag ,/n./@卑鄙的家伙;
 seastar ,/n./@海星;
+seclude ,/vt./@隔离;,/vt./@隔绝;,/vt./@孤立;
 secrecy ,/n./@秘密;
 section ,/n./@部分;,/n./@區域;,/n./@章節;
 secular ,/adj./@世俗的;,/adj./@长期的;,/adj./@现世的;
@@ -1090,13 +1120,14 @@ sixteen ,/adj./@十六;
 skeptic ,/n./@懷疑論者;
 skylark ,/vi./@胡鬧;,/n./@雲雀;
 skyline ,/n./@天涯;
+slander ,/n./@誹謗;,/vt./@誹謗;,/vt./@詆毀;
 slanted ,/adj./@歪的;
 slavery ,/n./@奴隸制;
 slender ,/adj./@細長的;,/adj./@苗條的;
 slumber ,/n./@睡眠;
 smatter ,/v./@略知;
 smolder ,/v./@悶燒;,/v./@鬱積;,/n./@陰燃;,/n./@悶燒;
-smother ,/v./@窒息;
+smother ,/v./@窒息;,/vt./@悶熄;,/vt./@抑制;,/vt./@悶死;
 smuggle ,/v./@走私;
 snuggle ,/v./@緊抱;,/v./@偎依;
 society ,/n./@社會;
@@ -1127,7 +1158,7 @@ stadium ,/n./@體育場;,/n./@運動場;
 staffer ,/n./@職員;,/n./@工作人員;
 stagger ,/v./@蹣跚;
 stalker ,/n./@跟踪者;
-stamina ,/n./@毅力;,/n./@精力;,/n./@活力;,/n./@持久力;
+stamina ,/n./@毅力;,/n./@精力;,/n./@活力;,/n./@持久力;,/n./@耐力;
 startle ,/v./@驚愕;
 station ,/n./@車站;
 stellar ,/adj./@星的;,/adj./@星球的;
@@ -1149,7 +1180,7 @@ subside ,/v./@平息;,/v./@減弱;,/v./@沉澱;,/v./@坐下;
 subsidy ,/n./@補貼;
 succeed ,/v./@成功;
 success ,/n./@成功;
-succumb ,/vi./@屈服;
+succumb ,/vi./@屈服;,/vi./@被壓垮;
 sucrose ,/n./@蔗糖;
 suction ,/n./@吸入;,/n./@吸引;,/n./@吸;,/n./@吸力;
 suffice ,/v./@足夠;,/v./@滿足;
@@ -1203,6 +1234,7 @@ thought ,/v./@想@<think的過去式>;
 thrifty ,/adj./@節儉的;,/adj./@茂盛的;
 through ,/v./@通過;,/adv./@徹底;,/adj./@直達的;
 thunder ,/n./@雷;
+thyroid ,/n./@甲狀腺;,/n./@甲狀軟骨;,/adj./@甲狀腺的;,/adj./@甲狀軟骨的;
 tobacco ,/n./@煙草;
 toddler ,/n./@學步的小孩;,/n./@幼童;
 tonight ,/n./@今晚;,/adv./@今晚;
@@ -1212,6 +1244,7 @@ torpedo ,/n./@魚雷;
 torrent ,/n./@奔流;,/n./@連續;
 torture ,/v./@折磨;,/v./@拷打;
 tourism ,/n./@旅游業;
+tracker ,/n./@追蹤者;,/n./@追捕者;
 tractor ,/n./@拖拉機;
 traffic ,/n./@交通;
 tragedy ,/n./@悲劇;
@@ -1220,6 +1253,7 @@ traitor ,/n./@叛徒;
 trample ,/v./@踐踏;
 tranche ,/n./@部分;
 treason ,/n./@叛国罪;,/n./@叛国;
+trekker ,/n./@徒步旅行者;
 tremble ,/v./@顫抖;
 tribune ,/n./@保民官;
 tribute ,/n./@頌詞;,/n./@獻禮;,/n./@贡品;
@@ -1228,6 +1262,7 @@ trigger ,/n./@扳機;,/vt./@觸發;,/vt./@引發;,/n./@誘因;,/n./@触发器;,/
 trinity ,/n./@三位一體;,/n./@三倍;
 triumph ,/n./@勝利;,/n./@凱旋;
 trivial ,/adj./@瑣碎的;
+trolley ,/n./@手推車;,/n./@臺車;,/n./@電車;,/n./@觸輪;
 trooper ,/n./@騎兵;,/n./@騎警;,/n./@傘兵;
 trouble ,/n./@麻煩;
 trumpet ,/n./@喇叭;
@@ -1246,9 +1281,11 @@ uniform ,/n./@制服;,/adj./@全部相同的;
 unknown ,/adj./@未知的;,/adj./@陌生的;,/n./@未知;,/n./@未知物;,/n./@未知數;
 unleash ,/v./@解放;
 unlucky ,/adj./@不幸的;
+unravel ,/vt./@解開;,/vt./@澄清;
 upfront ,/adj./@預付的;,/adj./@在前面的;,/adj./@正直的;,/adj./@坦率的;,/adj./@显要的;
 upright ,/adj./@正直的;
 urgency ,/n./@緊急;,/n./@緊急事件;
+urinate ,/vi./@撒尿;,/vi./@排尿;,/vi./@小便;
 useless ,/adj./@無用的;
 utensil ,/n./@器皿;,/n./@用具;
 utility ,/n./@實用;,/adj./@實用的;,/n./@實用設施;,/n./@實用性;
@@ -1299,6 +1336,7 @@ warlock ,/n./@術士;,/n./@巫師;,/n./@魔術師;
 warning ,/n./@警告;
 warrant ,/v.//n./@許可;,/v.//n./@保證;,/v.//n./@擔保;,/n./@根據;,/n./@證明;
 warrior ,/n./@戰士;
+waybill ,/n./@乘客名單;,/n./@運貨單;
 weather ,/n./@天氣;
 webpage ,/n./@網頁;
 wedding ,/n./@婚禮;,/n./@婚宴;,/n./@結婚;,/n./@結合;
