--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -21,6 +21,7 @@ actually ,/adv./@事实上;
 addendum ,/n./@附錄;,/n./@附件;,/n./@補遺;
 addition ,/n./@添加;
 adequate ,/adj./@足够的;
+adherent ,/n./@追隨者;,/n./@擁護者;
 adjacent ,/adj./@邻近的;
 admonish ,/v./@告誡;,/v./@勸告;
 adorable ,/adj./@可爱的;,/adj./@可敬的;
@@ -70,7 +71,7 @@ aperture ,/n./@孔;,/n./@穴;
 aphorism ,/n./@格言;
 apostasy ,/n./@變節;,/n./@背叛;
 appalled ,/adj./@惊骇的;
-apparent ,/adj./@明显的;
+apparent ,/adj./@明显的;,/adj./@表面上的;
 appendix ,/n./@附录;,/n./@阑尾;
 appetite ,/n./@胃口;
 applause ,/n./@鼓掌;,/n./@喝彩;,/n./@認可;
@@ -111,6 +112,7 @@ bachelor ,/n./@單身漢;,/n./@學士;
 backbone ,/n./@脊骨;
 backward ,/adj./@向后的;
 bacteria ,/n./@細菌;
+badmouth ,/vt./@詆毀;,/vt./@批評;
 bandange ,/n./@绷带;
 banister ,/n./@欄杆的支柱;
 baseball ,/n./@棒球;
@@ -163,8 +165,10 @@ casually ,/adj./@随便的;
 casualty ,/n./@傷亡;,/n./@伤亡人员;,/n./@受害者;,/n./@急诊室;
 catalyst ,/n./@催化剂;,/n./@触媒;,/n./@接触剂;,/n./@催化剂触媒;
 category ,/n./@种类;
+catheter ,/n./@導尿管;,/n./@導管;
 catholic ,/adj./@天主教的;
 cautious ,/adj./@谨慎的;
+cavalier ,/n./@騎士;,/n./@騎兵;
 celerity ,/n./@速度;
 cellular ,/adj./@细胞的;,/adj./@多孔的;
 cemetary ,/n./@墓地;
@@ -293,6 +297,7 @@ derelict ,/adj./@破败的;,/adj./@荒废的;
 describe ,/v./@描述;
 deserter ,/n./@逃兵;,/n./@背棄者;
 designer ,/n./@设计师;
+desolate ,/adj./@荒蕪的;,/adj./@無人煙的;,/adj./@荒涼的;,/adj./@淒涼的;,/adj./@孤寂的;
 destrier ,/n./@军马;
 detecter ,/n./@探测器;
 detonate ,/v./@引爆;,/v./使@爆炸;
@@ -311,6 +316,7 @@ dinosaur ,/n./@恐龙;
 director ,/n./@导演;
 disabled ,/adj./@残疾的;,/adj./@丧失能力的;
 disagree ,/v./@不同意;
+disarray ,/n./@無序;,/n./@杂乱;,/n./@混乱;,/vt./@弄亂;
 disaster ,/n./@灾难;
 disciple ,/n./@门徒;
 disclaim ,/v./@否認;,/v./@放棄;
@@ -332,7 +338,7 @@ disprove ,/v./@反驳;
 dissolve ,/v./@溶解;
 distance ,/n./@距离;
 distaste ,/v./@厭惡;
-distinct ,/adj./@差别明显的;
+distinct ,/adj./@差别明显的;,/adj./@有區別的;,/adj./@明顯的;,/adj./@清楚的;
 distract ,/v./@分心;
 distress ,/v./使@痛苦;,/v./使@悲伤;,/n./@痛苦;,/n./@悲伤;,/n./@悲痛;,/n./@危難;
 district ,/n./@区;
@@ -394,6 +400,7 @@ envelope ,/n./@信封;
 enviable ,/adj./@值得羡慕的;
 envision ,/vt./@想象;
 epidemic ,/adj./@流行的;,/adj./@傳染性的;,/n./@傳染病;,/n./@流行病;
+epilepsy ,/n./@癲癇;
 epilogue ,/n./@尾聲;,/n./@結局;,/n./@後記;,/n./@收場白;
 epiphany ,/n./@頓悟;,/n./@顯現;,/n./@主顯節;
 equality ,/n./@相等;
@@ -425,10 +432,11 @@ explicit ,/adj./@明确的;
 exponent ,/adj./@說明的;,/n./@指數;,/n./@典型;,/n./@說明;
 exposure ,/n./@暴露;,/n./@揭露;
 exterior ,/adj./@外部的;,/n./@外部;
-external ,/adj./@外部的;
+external ,/adj./@外部的;,/adj./@外界的;,/adj./@對外的;,/adj./@外來的;
 eyesight ,/n./@视力;
 fabulous ,/adj./@难以置信的;,/adj./@传说的;
 facebook ,/n./@脸书网;
+faceless ,/adj./@無臉的;,/adj./@無面孔的;
 facility ,/n./@设施;
 faithful ,/adj./@有信心的;
 familiar ,/adj./@熟悉的;,/adj./@親近的;,/adj./@相似的;
@@ -438,6 +446,7 @@ favorite ,/adj./@最爱的;
 feasible ,/adj./@可行的;
 February ,/n./@二月;
 feedback ,/n./@反饋;
+ferocity ,/n./@兇猛;,/n./@殘暴;
 festival ,/n./@节日;
 fidelity ,/n./@忠誠;
 filicide ,/n./@杀害子女;
@@ -451,23 +460,27 @@ flourish ,/v./@茂盛;,/v./@繁荣;,/v./@兴旺;
 fluently ,/adv./@流畅地;
 flurried ,/adj./@慌張的;,/adj./@慌亂的;
 football ,/n./@足球;
+footwear ,/n./@鞋類;
 forceful ,/adj./@有力的;
 forecast ,/vt./@预报;
 foremost ,/adj./@最初的;,/adj./@一流的;
-forensic ,/adj./@法院的;
+forensic ,/adj./@法院的;,/n./@法庭的;
+forester ,/n./@林務官;,/n./@林务员;
 fortress ,/n./@城堡;
 fountain ,/n./@喷泉;,/n./@源泉;
 fourteen ,/adj./@十四;
 fraction ,/n./@分數;,/n./@部分;,/n./@小部分;,/n./@片段;
-fracture ,/n./@斷裂;,/v./@折斷;
+fracture ,/n./@斷裂;,/v./@折斷;,/n./@骨折;
 fragment ,/n./@碎片;,/n./@片段;
 fragrant ,/adj./@芬芳的;
 freeline ,/n./@漂移板;
-frenzied ,/adj./@瘋狂的;
+frenzied ,/adj./@瘋狂的;,/adj./@狂熱的;
 frequent ,/adj./@频繁的;
 frighten ,/v./@惊吓;
 frontier ,/n./@前线;
 fruitful ,/adj./@多产的;,/adj./@富有成效的;
+fugitive ,/n./@逃亡者;,/n./@逃犯;,/adj./@逃亡的;,/adj./@逃跑的;
+fumigate ,/vt./@煙燻;,/vt./@燻蒸;
 function ,/n./@作用;,/n./@功能;,/n./@函數;,/v./@运行;
 fuselage ,/n./@機身;
 futility ,/n./@無用;,/n./@徒勞;,/n./@無效;,/n./@無益;
@@ -485,6 +498,7 @@ gorgeous ,/adj./@华丽的;,/adj./@灿烂的;,/adj./@漂亮的;,/adj./@令人愉
 gourmand ,/n./@美食家;
 governor ,/n./@统治者;
 gracious ,/adj./@亲切的;,/adj./@高尚的;
+gradient ,/n./@斜坡;,/n./@坡度;,/n./@斜率;,/n./@梯度;
 graduate ,/v./@毕业;
 graffiti ,/n./@塗鴉;
 grapheme ,/n./@字素;,/n./@字母;,/n./@字位;
@@ -528,6 +542,7 @@ humidity ,/n./@湿度;,/n./@潮湿;
 humility ,/n./@謙虛;
 humorous ,/adj./@幽默的;
 hygienic ,/adj./@衛生的;
+hypnosis ,/n./@催眠狀態;
 hypnotic ,/n./@安眠藥;,/adj./@催眠的;,/adj./@安眠的;
 hysteria ,/n./@癔病;
 hysteric ,/adj./@亢奮的;
@@ -543,16 +558,19 @@ immortal ,/adj./@不死的;,/adj./@永生的;
 immunity ,/n./@免疫力;,/n./@豁免權;
 imperial ,/adj./@帝国的;
 implicit ,/adj./@含蓄的;,/adj./@暗示的;,/adj./@盲從的;
+imposter ,/n./@冒充者;,/n./@冒名頂替者;
+impunity ,/n./@免受懲處;,/n./@不受懲罰;
 impurity ,/n./@雜質;,/n./@不純;,/n./@不潔;,/n./@不純之物;
 inactive ,/adj./@不活跃的;,/adj./@不活动的;,/adj./@怠惰的;,/adj./@暂停的;
 incident ,/n./@事件;
+incision ,/n./@切口;,/n./@切開;,/n./@切入;,/n./@切割;,/n./@雕刻;
 increase ,/v./@增加;
 incubate ,/v./@孵化;
 indebted ,/adj./@感激的;,/adj./@感恩的;
 indicate ,/v./@表明;,/v./@指示;
 indirect ,/n./@间接的;
 industry ,/n./@工业;
-infamous ,/adj./@醜惡的;,/adj./@臭名昭著的;
+infamous ,/adj./@醜惡的;,/adj./@臭名昭著的;,/adj./@聲名狼藉的;
 infantry ,/n./@步兵;,/n./@步兵團;
 inferior ,/adj./@下级的;,/adj./@下等的;,/adj./@差的;
 infinite ,/adj./@无尽的;,/adj./@无穷的;,/adj./@无限的;
@@ -622,6 +640,7 @@ location ,/n./@位置;
 lollipop ,/n./@棒棒糖;
 lonesome ,/adj./@寂寞的;
 lopsided ,/adj./@歪的;
+magazine ,/n./@彈倉;,/n./@彈盒;,/n./@雜誌;,/n./@期刊;
 magister ,/n./@教師;
 magnetic ,/adj./@磁性的;
 mahogany ,/n./@桃花心木;
@@ -629,6 +648,7 @@ mainland ,/n./@大陸;,/n./@本土;
 maintain ,/v./@维持;,/v./@继续;,/v./@主张;
 majority ,/n./@多数;
 mandarin ,/n./@大人;,/adj./@官方的;
+mandolin ,/n./@曼陀林;
 maneuver ,/n./@機動;,/n./@演習;,/v./@機動;,/v./@演習;
 maniacal ,/adj./@瘋狂的;
 manicure ,/v./@修剪;
@@ -644,6 +664,7 @@ mechanic ,/n./@机修工;
 mediator ,/n./@调解人;
 mediocre ,/adj./@普通的;,/adj./@平凡的;,/adj./@中等的;,/adj./@平庸的;
 meditate ,/v./@考慮;,/v./@冥想;
+meltdown ,/n./@熔毀;,/n./@崩潰;,/n./@潰敗;
 memorize ,/v./@记住;
 merchant ,/n./@商人;
 merciful ,/adj./@仁慈的;
@@ -703,6 +724,7 @@ nonsense ,/n./@废话;,/n./@无稽之谈;
 normalcy ,/n./@正常状态;,/n./@常态;
 notation ,/n./@符号;,/n./@记号法;,/n./@注释;,/n./@乐谱;
 notebook ,/n./@笔记本;
+nouvelle ,/adj./@新式的;,/n./@新的;
 November ,/n./@十一月;
 nowadays ,/adv./@如今;,/adv./@目前;
 nuisance ,/n./@讨厌的东西;,/n./@麻煩事;,/n./@妨害行為;
@@ -766,6 +788,7 @@ parallel ,/adj./@平行的;
 paralyze ,/v./@使瘫痪;
 paramour ,/n./@情人;,/n./@情婦;,/n./@情伕;
 paranoia ,/n./@妄想症;
+paranoid ,/adj./@偏執狂的;,/adj./@患妄想症的;,/n./@偏執狂患者;
 parasite ,/n./@寄生虫;,/n./@寄生生物;
 particle ,/n./@颗粒;
 passerby ,/n./@路人;
@@ -813,6 +836,7 @@ practise ,/v./@练习;,/v./@实践;
 pratfall ,/n./@坐跌;,/n./@失態;
 precinct ,/n./@警区;,/n./@选区;,/n./@步行区;,/n./@周边区域;
 precious ,/adj./@珍贵的;
+preclude ,/vt./@排除;,/vt./@防止;,/vt./@杜絕;
 pregnant ,/adj./@怀孕的;
 premiere ,/v./@初次公演;
 preserve ,/v./@保护;,/v./@维持;,/v./@保存;
@@ -842,7 +866,7 @@ prostate ,/n./@前列腺;
 protocol ,/n./@協議;,/n./@礼节;,/n./@条约草案;,/n./@议定书;
 prudence ,/n./@謹慎;
 punctual ,/adj./@准时的;
-puncture ,/v./@刺穿;
+puncture ,/v./@刺穿;,/vt./@刺破;
 punitive ,/adj./@惩罚性的;,/adj./@苛刻的;
 purchase ,/v./@购买;
 quackery ,/n./@庸医的医术;,/n./@欺骗行为;
@@ -865,6 +889,7 @@ refinery ,/n./@精炼;,/n./@精炼厂;
 regiment ,/n./@團;,/n./@大量;
 register ,/v./@登记;,/v./@挂号;
 rehearse ,/v./@排練;
+reindeer ,/n./@馴鹿;
 relation ,/n./@关系;
 relative ,/n./@亲戚;
 relegate ,/v./@降級到;,/v./@貶謫;,/v./@放逐;,/v./@移交;,/v./@歸入;
@@ -893,7 +918,9 @@ revenant ,/adj./@归来的;,/adj./@亡魂的;,/adj./@幽灵的;,/n./@亡魂;
 reversal ,/n./@颠倒;,/n./@逆转;,/n./@对调;,/n./@撤销;
 revision ,/n./@复习;,/n./@修订;
 rhapsody ,/n./@狂想曲;
-ridicule ,/v./@嘲笑;
+rhetoric ,/n./@修辭;,/n./@修辭學;,/n./@雄辯;,/n./@言辞;,/n./@辭令;,/n./@言語;
+rhinitis ,/n./@鼻炎;
+ridicule ,/v./@嘲笑;,/vt./@揶揄;,/vt./@奚落;
 rigorous ,/adj./@嚴厲的;
 robotics ,/n./@機器人學;
 romantic ,/adj./@浪漫的;
@@ -911,6 +938,7 @@ scaffold ,/n./@脚手架;,/n./@绞刑台;
 scarcely ,/adv./@仅仅;
 scarcity ,/n./@不足;
 scathing ,/adj./@尖刻的;,/adj./@苛刻的;,/adj./@嚴厲的;,/adj./@傷害的;,/adj./@損傷的;
+scavenge ,/vt./@搜寻;
 scenario ,/n./@方案;,/n./@情节;,/n./@剧本;
 schedule ,/n./@日程;,/n./@安排;
 scissors ,/n./@剪刀;
@@ -952,6 +980,7 @@ skeleton ,/n./@骨架;,/n./@骨骼;,/n./@綱要;
 skillful ,/adj./@娴熟的;
 skirmish ,/n./@小衝突;
 sluggish ,/adj./@遲鈍的;,/adj./@遲緩的;,/adj./@懶惰的;
+smoulder ,/vi./@陰燃;,/vi./@悶燃;
 sobriety ,/n./@清醒;,/n./@冷靜;,/n./@節制;,/n./@嚴肅;
 sodomize ,/v./@鸡奸;
 software ,/n./@软件;
@@ -971,7 +1000,7 @@ spiteful ,/adj./@懷恨的;,/adj./@惡意的;
 splatter ,/vt./@泼溅;,/vi./@啪嗒作响;,/n./@啪嗒声;
 splendid ,/adj./@壮丽的;
 splendor ,/n./@光彩;,/n./@壯麗;,/n./@壯觀;,/n./@光輝;,/n./@輝煌;
-sporadic ,/adj./@零星的;,/adj./@分散的;,/adj./@偶發的;
+sporadic ,/adj./@零星的;,/adj./@分散的;,/adj./@偶發的;,/adj./@散發的;
 sprinkle ,/vt./@洒;,/vt./@撒;,/n./@少量;
 spurious ,/adj./@假的;
 squander ,/v./@浪費;,/vt./@挥霍;
@@ -987,7 +1016,7 @@ stickler ,/n./@頑固的人;,/n./@堅持的人;
 stimulus ,/n./@刺激;,/n./@刺激物;,/n./@激勵;
 straight ,/adj./@直的;,/adj./@直接的;
 stranger ,/n./@陌生人;
-strangle ,/v./@勒死;
+strangle ,/v./@勒死;,/vt./@扼死;,/vt./@絞死;
 strategy ,/n./@战略;
 strength ,/n./@优点;
 striking ,/adj./@顯著的;
@@ -1018,11 +1047,12 @@ syllable ,/n./@音节;
 symbolic ,/adj./@象征性的;
 symmetry ,/n./@對稱;
 sympathy ,/n./@同情;
-symphony ,/n./@交响乐;
+symphony ,/n./@交响乐;,/n./@交響曲;,/n./@和聲;,/n./@和諧;,/n./@諧聲;
 synaptic ,/adj./@突触的;
 synonymy ,/n./@同義;
 synoptic ,/adj./@概要的;,/adj./@提要的;
 tactical ,/adj./@战术上的;,/adj./@战术的;,/adj./@有谋略的;,/adj./@短程的;
+talisman ,/n./@護身符;
 tangible ,/adj./@有形的;,/adj./@切实的;
 taxation ,/n./@税务;,/n./@税;
 tectonic ,/adj./@构造的;,/adj./@建筑的;,/adj./@地壳构造的;
