--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -1,4 +1,5 @@
 abbreviate
+abominable
 abrogation
 absolutely
 abstemious
@@ -86,6 +87,7 @@ benevolent
 binoculars
 biological
 bitterness
+bloodstain
 blundering
 boisterous
 borderline
@@ -111,6 +113,8 @@ chivalrous
 chromosome
 circumcise
 circumvent
+clumsiness
+collarbone
 collateral
 collecting
 collection
@@ -182,6 +186,7 @@ conversely
 conversion
 conviction
 convincing
+convulsion
 coordinate
 cornucopia
 correspond
@@ -309,6 +314,7 @@ guillotine
 gymnastics
 handicraft
 helicopter
+hemorrhage
 hemorrhoid
 henceforth
 hereditary
@@ -341,6 +347,7 @@ indefinite
 indelicate
 indication
 indictment
+indigenous
 individual
 inducement
 industrial
@@ -364,6 +371,7 @@ intestinal
 intestines
 intimidate
 intonation
+intoxicate
 intriguing
 introspect
 invalidate
@@ -374,6 +382,7 @@ invigorate
 invincible
 invitation
 irrational
+irreverent
 irritating
 jeopardize
 journalism
@@ -425,6 +434,7 @@ mutability
 mutilation
 myocardial
 mysterious
+narcissist
 navigation
 neutralize
 nomination
@@ -441,6 +451,7 @@ opposition
 optimistic
 ornamental
 orthogonal
+outlandish
 paedophile
 pagination
 parametric
@@ -468,6 +479,7 @@ phenomenal
 phenomenon
 philosophy
 phonograph
+phosphorus
 pickpocket
 plantation
 playwright
@@ -502,6 +514,7 @@ psychopath
 pubescence
 pugnacious
 radicalism
+radiosonde
 reasonable
 receptacle
 recreation
@@ -516,6 +529,7 @@ relinquish
 reluctance
 remarkable
 remorseful
+remunerate
 repatriate
 repentance
 repetition
@@ -588,6 +602,7 @@ suggestion
 supersonic
 supplement
 supplicate
+surrealism
 suspicious
 synonymous
 systematic
@@ -609,6 +624,7 @@ transitive
 translucid
 transplant
 tremendous
+triviality
 tumultuous
 turbulence
 ultimately
@@ -619,6 +635,7 @@ undeniable
 underneath
 underscore
 understand
+undeterred
 unexpected
 unilateral
 university
