--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -37,11 +37,13 @@ braggadocio
 bureaucracy
 calculation
 carnivorous
+categorical
 celebration
 certificate
 charismatic
 chlorophyll
 chloroplast
+chloroprene
 cholesterol
 clairvoyant
 clandestine
@@ -53,6 +55,7 @@ comfortable
 commandante
 commandment
 commemorate
+commentator
 communicate
 compartment
 competition
@@ -68,6 +71,7 @@ conditional
 condominium
 confederate
 confinement
+confounding
 conjunction
 connotation
 consecutive
@@ -198,6 +202,7 @@ incorporate
 incredulous
 incremental
 independent
+indifferent
 indignation
 indivisible
 inferiority
@@ -242,6 +247,7 @@ merchandise
 metaphysics
 methodology
 mindfulness
+misconstrue
 multinomial
 nationality
 Neitherland
@@ -249,6 +255,7 @@ nonchalance
 nondescript
 nonsensical
 notoriously
+objectivity
 observation
 obstruction
 opportunity
@@ -257,10 +264,12 @@ orthography
 oscillation
 outstanding
 overlapping
+paradoxical
 parentheses
 participant
 participate
 partnership
+pathologist
 patronizing
 peculiarity
 pedagogical
@@ -269,10 +278,12 @@ penultimate
 performance
 perfunctory
 permutation
+perpetrator
 persistence
 personality
 perspective
 pessimistic
+planetarium
 poltergeist
 pomegranate
 possibility
@@ -280,6 +291,7 @@ precipitate
 predictable
 predominant
 prehistoric
+premonition
 preparation
 preposition
 prerogative
@@ -366,6 +378,7 @@ timemachine
 topographic
 traditional
 transaction
+transfusion
 translation
 translucent
 transparent
@@ -374,8 +387,10 @@ treacherous
 treasurable
 troublesome
 ultraphonic
+unbeknownst
 underground
 undoubtedly
+unequivocal
 unfortunate
 unimportant
 universally
