--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -15,6 +15,8 @@ announcement
 antediluvian
 anthropology
 anticipation
+appendectomy
+appendicitis
 appreciation
 apprehension
 architecture
@@ -26,7 +28,9 @@ bloodletting
 bureaucratic
 cancellation
 canonicalize
+cantankerous
 carelessness
+catastrophic
 circumcentre
 circumscribe
 circumstance
@@ -57,6 +61,7 @@ contribution
 contumacious
 conveniently
 conversation
+correctional
 cosmopolitan
 covetousness
 degeneration
@@ -82,10 +87,12 @@ entrepreneur
 estrangement
 exaggeration
 exasperation
+excruciating
 experimental
 exploitation
 extravagance
 gerontocracy
+hallucinogen
 heterosexual
 housewarming
 hypothetical
@@ -101,6 +108,7 @@ indebtedness
 independence
 indifference
 individually
+inexplicable
 infiltration
 inflammatory
 infringement
@@ -132,6 +140,7 @@ misquotation
 modification
 monotheistic
 narcissistic
+neurasthenic
 nevertheless
 notification
 occupational
@@ -158,7 +167,9 @@ professional
 proportional
 prostitution
 protuberance
+psychotropic
 purification
+putrefaction
 quadriplegic
 questionable
 reassignment
