--- a/Files/lang/en/english13.csv
+++ b/Files/lang/en/english13.csv
@@ -39,6 +39,7 @@ correspondent
 corresponding
 counterattack
 counterweight
+decomposition
 demonstration
 deterioration
 determination
@@ -73,6 +74,7 @@ justification
 magnification
 manifestation
 Mediterranean
+meteorologist
 miscellaneous
 misunderstood
 monochromatic
