--- a/Files/lang/en/english15.csv
+++ b/Files/lang/en/english15.csv
@@ -3,6 +3,7 @@ democratization
 dichotomization
 distinguishable
 experimentation
+hypoproteinemia
 notwithstanding
 perspectiveness
 straightforward
