--- a/Files/lang/en/english4.csv
+++ b/Files/lang/en/english4.csv
@@ -314,6 +314,7 @@ flaw
 flea
 flee
 flew
+flex
 flip
 flog
 flop
@@ -347,9 +348,11 @@ fuse
 fuss
 gage
 gain
+gale
 game
 gank
 gape
+gash
 gasp
 gate
 gave
@@ -456,6 +459,7 @@ hull
 hunt
 hurl
 hurt
+hush
 hype
 i've
 icon
@@ -498,6 +502,7 @@ knot
 know
 lack
 lady
+lair
 lake
 lamb
 lame
@@ -525,6 +530,7 @@ lend
 lens
 less
 lest
+lewd
 liar
 life
 lift
@@ -551,6 +557,7 @@ long
 look
 loom
 loop
+loot
 lord
 lore
 lose
@@ -566,6 +573,7 @@ lurk
 lush
 lust
 luxe
+lynx
 mace
 made
 maid
@@ -791,6 +799,7 @@ rent
 rest
 rice
 rich
+rife
 rift
 ring
 riot
@@ -876,10 +885,12 @@ size
 skim
 skin
 skip
+slab
 slam
 slap
 slat
 slay
+sled
 slim
 slip
 slit
@@ -948,6 +959,7 @@ talk
 tall
 tank
 tape
+tarp
 tart
 task
 taut
@@ -963,6 +975,7 @@ test
 text
 than
 that
+thaw
 thee
 them
 then
@@ -1003,6 +1016,7 @@ trap
 tree
 trek
 trim
+trio
 trot
 troy
 true
@@ -1013,11 +1027,13 @@ turd
 turf
 turn
 twat
+twig
 twin
 twit
 type
 tyre
 ugly
+ulna
 unit
 urge
 user
@@ -1026,6 +1042,7 @@ vale
 vamp
 vary
 vast
+veer
 veil
 vend
 verb
@@ -1096,10 +1113,12 @@ yeah
 year
 yell
 yelp
+yeti
 yike
 yolk
 your
 zeal
 zero
 zest
+zinc
 zoom
