--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -1,3 +1,4 @@
+abate
 abbey
 abhor
 abide
@@ -67,6 +68,7 @@ ankle
 annoy
 annul
 antic
+aorta
 apart
 appal
 apple
@@ -168,16 +170,19 @@ breed
 bride
 brief
 bring
+brink
 brisk
 broad
 broke
 brood
 broom
 brown
+brunt
 brush
 brute
 build
 built
+bulge
 bully
 bunch
 burst
@@ -202,6 +207,7 @@ cease
 chain
 chair
 chalk
+champ
 chant
 charm
 chart
@@ -285,6 +291,7 @@ creed
 creek
 creep
 cress
+crest
 crime
 crimp
 crisp
@@ -365,7 +372,9 @@ eager
 eagle
 early
 earth
+edema
 edict
+eerie
 eigen
 eight
 eject
@@ -377,6 +386,7 @@ elope
 elude
 elves
 embed
+ember
 emend
 empty
 enemy
@@ -432,6 +442,7 @@ fight
 final
 first
 firth
+fishy
 flail
 flame
 flank
@@ -470,6 +481,7 @@ fraud
 freak
 fresh
 frisk
+Fritz
 front
 frost
 froth
@@ -485,6 +497,7 @@ gamer
 gamut
 gauge
 gaunt
+geese
 genre
 ghost
 giant
@@ -505,6 +518,8 @@ gnome
 gonna
 goods
 goose
+gorge
+gouge
 gourd
 grade
 grail
@@ -553,6 +568,7 @@ heart
 heave
 heavy
 hedge
+hefty
 hello
 hence
 hepta
@@ -572,6 +588,7 @@ hover
 human
 humid
 humor
+hunch
 hunky
 hurry
 ideal
@@ -606,6 +623,7 @@ kneel
 knife
 known
 kodak
+kraut
 label
 labor
 lager
@@ -624,6 +642,7 @@ lease
 leash
 least
 leave
+ledge
 leech
 leery
 legal
@@ -700,6 +719,7 @@ mogul
 moist
 money
 month
+moose
 moral
 moron
 morph
@@ -774,6 +794,7 @@ pants
 param
 parch
 paren
+parka
 parse
 party
 paste
@@ -942,6 +963,7 @@ score
 scorn
 scour
 scowl
+scram
 scrap
 scrub
 scull
@@ -1081,6 +1103,7 @@ stamp
 stand
 stare
 start
+stash
 state
 stead
 steal
@@ -1185,6 +1208,7 @@ Tokyo
 tooth
 topic
 torch
+torso
 total
 totem
 touch
