--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -2,6 +2,7 @@ abandon
 abiding
 ability
 abolish
+abscond
 absence
 absolve
 abstain
@@ -76,6 +77,7 @@ archive
 arduous
 arousal
 arrange
+arsenal
 article
 artisan
 ascetic
@@ -127,10 +129,13 @@ bereave
 besides
 besiege
 between
+bewitch
 bicycle
 billion
 biology
+bipolar
 biscuit
+bivouac
 bizarre
 bladder
 blanket
@@ -148,6 +153,7 @@ bonjour
 booklet
 boredom
 borough
+boulder
 bouquet
 bracket
 bravado
@@ -166,6 +172,7 @@ buffalo
 buffoon
 bulimia
 burglar
+burrito
 bustard
 butcher
 buttock
@@ -176,6 +183,7 @@ canvass
 capable
 capella
 capital
+capsize
 capsule
 captain
 caption
@@ -251,6 +259,7 @@ complex
 compose
 compost
 compute
+concave
 conceal
 concede
 conceit
@@ -307,6 +316,7 @@ courage
 courier
 cramped
 crapper
+crevice
 crimson
 cripple
 crooked
@@ -316,8 +326,10 @@ cruelly
 cruelty
 crumple
 cryptic
+cryptid
 crystal
 cubicle
+culprit
 culture
 curious
 current
@@ -418,6 +430,7 @@ dustbin
 dwindle
 dynamic
 earnest
+ebonite
 economy
 ecstasy
 edifice
@@ -496,6 +509,7 @@ feather
 feature
 feeling
 feigned
+femoral
 fertile
 fervent
 fervour
@@ -511,6 +525,7 @@ flatten
 flatter
 flexure
 flicker
+foliage
 foolish
 footage
 foreign
@@ -624,6 +639,7 @@ implore
 impress
 improve
 impulse
+incisor
 incline
 include
 indulge
@@ -644,6 +660,7 @@ inspire
 install
 instant
 instead
+instill
 integer
 intense
 interim
@@ -654,6 +671,7 @@ invoice
 involve
 inwards
 isolate
+isotope
 iterate
 January
 jasmine
@@ -681,6 +699,7 @@ lateral
 lattice
 launder
 laundry
+leaflet
 lecture
 leecher
 leisure
@@ -812,9 +831,12 @@ optimal
 orchard
 ordinal
 organic
+orifice
+osmotic
 ossuary
 outcome
 outdoor
+outland
 outline
 outlook
 outpost
@@ -823,6 +845,7 @@ outrank
 outside
 overall
 overlap
+oxidize
 pacific
 package
 paladin
@@ -861,6 +884,7 @@ perform
 perfume
 perhaps
 perjury
+perplex
 persist
 pertain
 perturb
@@ -880,9 +904,11 @@ placard
 placate
 placebo
 plateau
+pleural
 plumber
 plummet
 plunder
+poacher
 podcast
 pointer
 pollute
@@ -1022,6 +1048,7 @@ revenue
 reverse
 revolve
 rhombus
+ribcage
 rickety
 riposte
 rivalry
@@ -1032,6 +1059,8 @@ romance
 routine
 royalty
 rubbish
+rummage
+rupture
 sabbath
 salvage
 sarcasm
@@ -1053,6 +1082,7 @@ scratch
 screech
 scumbag
 seastar
+seclude
 secrecy
 section
 secular
@@ -1090,6 +1120,7 @@ sixteen
 skeptic
 skylark
 skyline
+slander
 slanted
 slavery
 slender
@@ -1203,6 +1234,7 @@ thought
 thrifty
 through
 thunder
+thyroid
 tobacco
 toddler
 tonight
@@ -1212,6 +1244,7 @@ torpedo
 torrent
 torture
 tourism
+tracker
 tractor
 traffic
 tragedy
@@ -1220,6 +1253,7 @@ traitor
 trample
 tranche
 treason
+trekker
 tremble
 tribune
 tribute
@@ -1228,6 +1262,7 @@ trigger
 trinity
 triumph
 trivial
+trolley
 trooper
 trouble
 trumpet
@@ -1246,9 +1281,11 @@ uniform
 unknown
 unleash
 unlucky
+unravel
 upfront
 upright
 urgency
+urinate
 useless
 utensil
 utility
@@ -1299,6 +1336,7 @@ warlock
 warning
 warrant
 warrior
+waybill
 weather
 webpage
 wedding
