--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -21,6 +21,7 @@ actually
 addendum
 addition
 adequate
+adherent
 adjacent
 admonish
 adorable
@@ -111,6 +112,7 @@ bachelor
 backbone
 backward
 bacteria
+badmouth
 bandange
 banister
 baseball
@@ -163,8 +165,10 @@ casually
 casualty
 catalyst
 category
+catheter
 catholic
 cautious
+cavalier
 celerity
 cellular
 cemetary
@@ -293,6 +297,7 @@ derelict
 describe
 deserter
 designer
+desolate
 destrier
 detecter
 detonate
@@ -311,6 +316,7 @@ dinosaur
 director
 disabled
 disagree
+disarray
 disaster
 disciple
 disclaim
@@ -394,6 +400,7 @@ envelope
 enviable
 envision
 epidemic
+epilepsy
 epilogue
 epiphany
 equality
@@ -429,6 +436,7 @@ external
 eyesight
 fabulous
 facebook
+faceless
 facility
 faithful
 familiar
@@ -438,6 +446,7 @@ favorite
 feasible
 February
 feedback
+ferocity
 festival
 fidelity
 filicide
@@ -451,10 +460,12 @@ flourish
 fluently
 flurried
 football
+footwear
 forceful
 forecast
 foremost
 forensic
+forester
 fortress
 fountain
 fourteen
@@ -468,6 +479,8 @@ frequent
 frighten
 frontier
 fruitful
+fugitive
+fumigate
 function
 fuselage
 futility
@@ -485,6 +498,7 @@ gorgeous
 gourmand
 governor
 gracious
+gradient
 graduate
 graffiti
 grapheme
@@ -528,6 +542,7 @@ humidity
 humility
 humorous
 hygienic
+hypnosis
 hypnotic
 hysteria
 hysteric
@@ -543,9 +558,12 @@ immortal
 immunity
 imperial
 implicit
+imposter
+impunity
 impurity
 inactive
 incident
+incision
 increase
 incubate
 indebted
@@ -622,6 +640,7 @@ location
 lollipop
 lonesome
 lopsided
+magazine
 magister
 magnetic
 mahogany
@@ -629,6 +648,7 @@ mainland
 maintain
 majority
 mandarin
+mandolin
 maneuver
 maniacal
 manicure
@@ -644,6 +664,7 @@ mechanic
 mediator
 mediocre
 meditate
+meltdown
 memorize
 merchant
 merciful
@@ -703,6 +724,7 @@ nonsense
 normalcy
 notation
 notebook
+nouvelle
 November
 nowadays
 nuisance
@@ -766,6 +788,7 @@ parallel
 paralyze
 paramour
 paranoia
+paranoid
 parasite
 particle
 passerby
@@ -813,6 +836,7 @@ practise
 pratfall
 precinct
 precious
+preclude
 pregnant
 premiere
 preserve
@@ -865,6 +889,7 @@ refinery
 regiment
 register
 rehearse
+reindeer
 relation
 relative
 relegate
@@ -893,6 +918,8 @@ revenant
 reversal
 revision
 rhapsody
+rhetoric
+rhinitis
 ridicule
 rigorous
 robotics
@@ -911,6 +938,7 @@ scaffold
 scarcely
 scarcity
 scathing
+scavenge
 scenario
 schedule
 scissors
@@ -952,6 +980,7 @@ skeleton
 skillful
 skirmish
 sluggish
+smoulder
 sobriety
 sodomize
 software
@@ -1023,6 +1052,7 @@ synaptic
 synonymy
 synoptic
 tactical
+talisman
 tangible
 taxation
 tectonic
