--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -1,4 +1,5 @@
 abandoned
+abdominal
 abominate
 absorbing
 abstinent
@@ -99,7 +100,10 @@ autograph
 automatic
 auxiliary
 available
+avalanche
 backslash
+balaclava
+ballistic
 barometer
 barricade
 bartender
@@ -141,6 +145,7 @@ carpentry
 cartilage
 cascading
 catalogue
+catamaran
 catatonic
 celebrate
 celebrity
@@ -238,10 +243,12 @@ deceptive
 declining
 decompose
 decrement
+dedicated
 deduction
 defection
 defendant
 defensive
+defiantly
 deficient
 deflation
 dejection
@@ -288,6 +295,7 @@ disengage
 dishonest
 dismantle
 dismissal
+disorient
 disparity
 dispersal
 disregard
@@ -306,6 +314,7 @@ dystopian
 earnestly
 eccentric
 economist
+edematous
 editorial
 education
 effective
@@ -410,6 +419,7 @@ freelance
 freighter
 frequency
 frivolous
+frostbite
 fruitless
 frustrate
 fundament
@@ -422,12 +432,14 @@ gibberish
 gladiator
 gratitude
 grievance
+grotesque
 guarantee
 guideline
 gymnasium
 gymnastic
 halloween
 hamburger
+handiwork
 hashtable
 hazardous
 heartfelt
@@ -450,6 +462,7 @@ hydraulic
 hypnotize
 hypocrisy
 identical
+illogical
 imaginary
 imitation
 immediate
@@ -468,6 +481,7 @@ improvise
 inability
 incapable
 incentive
+incessant
 inclusion
 inclusive
 incorrect
@@ -523,6 +537,7 @@ itinerary
 jellyfish
 judgement
 judicious
+katabatic
 kinematic
 knowledge
 labyrinth
@@ -544,6 +559,7 @@ lucrative
 luxurious
 machinery
 magnitude
+makeshift
 malicious
 manifesto
 mannequin
@@ -555,6 +571,7 @@ masculine
 matriarch
 matricide
 matrimony
+mausoleum
 meanwhile
 mechanics
 mechanism
@@ -583,6 +600,7 @@ newsstand
 nightmare
 normalize
 nostalgic
+notoriety
 notorious
 nutrition
 obedience
@@ -598,6 +616,7 @@ occurrent
 octagonal
 offensive
 olfactory
+onslaught
 operation
 opportune
 orchestra
@@ -672,6 +691,7 @@ ponderous
 porcelain
 portfolio
 posterior
+posterity
 potential
 practical
 pragmatic
@@ -680,12 +700,14 @@ preceding
 precipice
 precision
 precursor
+predation
 predicate
 preferred
 pregnancy
 prejudice
 prescribe
 president
+prevalent
 primitive
 principal
 principle
@@ -707,6 +729,7 @@ prototype
 provision
 proximity
 pubescent
+pulmonary
 pulsation
 pulverize
 punctuate
@@ -718,6 +741,7 @@ quarterly
 quintuple
 quotation
 radiation
+radiogram
 rasterize
 rationale
 realistic
@@ -772,6 +796,7 @@ salacious
 salvation
 sanctuary
 sarcastic
+satirical
 satisfied
 scapegoat
 schematic
@@ -798,6 +823,7 @@ seriously
 seventeen
 severance
 sexuality
+shamanism
 sharpener
 shouldn't
 signature
@@ -852,6 +878,7 @@ symbiosis
 synagogue
 synthesis
 synthetic
+tangerine
 tantalize
 technique
 telephone
@@ -891,6 +918,7 @@ undertake
 underwear
 universal
 unlimited
+unnerving
 unscathed
 unseeable
 untouched
@@ -899,10 +927,12 @@ uppermost
 utterance
 uttermost
 vaccinate
+vandalism
 vandalize
 vegetable
 vehemence
 vengeance
+ventricle
 vibration
 viewpoint
 vigilance
@@ -919,6 +949,7 @@ warranted
 wasteland
 waterfall
 watermark
+watershed
 weariness
 Wednesday
 whirlwind
