--- a/Files/lang/ch/chinese15.csv
+++ b/Files/lang/ch/chinese15.csv
@@ -3,7 +3,8 @@ democratization ,/n./@民主化;
 dichotomization ,/n./@二分;
 distinguishable ,/adj./@可辨别的;
 experimentation ,/n./@试验;
+hypoproteinemia ,/n./@低蛋白血症;
 notwithstanding ,/adv./@尽管如此;,/adv./@即使这样;
 perspectiveness ,/n./@前瞻性;
-straightforward ,/adj./@直爽的;
+straightforward ,/adj./@直爽的;,/adj./@徑直的;,/adj./@直截了當的;,/adj./@簡單的;,/adj./@明確的;
 synchronization ,/n./@同步;
