--- a/Files/lang/en/english14.csv
+++ b/Files/lang/en/english14.csv
@@ -7,6 +7,7 @@ classification
 congratulation
 disappointedly
 discrimination
+dysproteinosis
 gentrification
 identification
 implementation
@@ -15,6 +16,7 @@ initialization
 interpretation
 interpupillary
 methodological
+mountaineering
 multiplication
 pharmaceutical
 philanthropist
