--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -80,6 +80,7 @@ arouse
 arrear
 arrest
 arrive
+artery
 artful
 artist
 ascend
@@ -138,6 +139,7 @@ battle
 bawdry
 bazaar
 beacon
+beaten
 beauty
 become
 before
@@ -229,6 +231,7 @@ carnal
 carpet
 carrot
 carton
+casket
 castle
 casual
 cattle
@@ -298,6 +301,7 @@ comply
 concur
 condom
 confer
+convex
 convey
 convoy
 cooker
@@ -351,6 +355,7 @@ dealer
 debase
 debate
 debris
+debunk
 decade
 deceit
 decent
@@ -444,6 +449,7 @@ elapse
 elated
 eleven
 elicit
+elixir
 embark
 emblem
 embryo
@@ -520,6 +526,7 @@ father
 faucet
 fealty
 feeble
+feisty
 fellow
 felony
 fervid
@@ -534,6 +541,7 @@ filthy
 finish
 finite
 fiscal
+fitful
 fixate
 fizzle
 flabby
@@ -699,6 +707,7 @@ insect
 insert
 inside
 insist
+instil
 insult
 insure
 intact
@@ -841,6 +850,7 @@ Monday
 monkey
 morale
 morbid
+morgue
 morose
 mortal
 mosque
@@ -907,6 +917,7 @@ oracle
 orange
 orchid
 ordain
+ordeal
 orgasm
 orient
 origin
@@ -914,6 +925,8 @@ ornate
 orphan
 others
 ouster
+outlaw
+outlet
 outset
 overdo
 pablum
@@ -945,6 +958,7 @@ peanut
 pebble
 peddle
 peking
+pelvis
 pencil
 people
 pepper
@@ -1031,6 +1045,7 @@ raisin
 ramble
 random
 ranger
+rappel
 raptor
 rarely
 rascal
@@ -1040,6 +1055,7 @@ ratify
 ration
 rattle
 ravage
+ravine
 really
 realty
 reason
@@ -1187,6 +1203,7 @@ severe
 sexual
 shabby
 shadow
+shaman
 shaver
 sheath
 shield
@@ -1217,6 +1234,8 @@ skinny
 sledge
 sleepy
 sleeve
+sleigh
+sleuth
 slight
 slogan
 slouch
@@ -1341,8 +1360,10 @@ tattoo
 tavern
 teapot
 temper
+temple
 tenant
 tender
+tendon
 tennis
 tenure
 terran
@@ -1382,6 +1403,7 @@ torpor
 toward
 tragic
 trance
+trauma
 travel
 treaty
 tremor
@@ -1393,6 +1415,7 @@ trifle
 triple
 trivet
 trivia
+trophy
 trough
 tumble
 tumult
@@ -1427,6 +1450,7 @@ uppity
 upward
 urbane
 urgent
+ursine
 useful
 utmost
 utopia
@@ -1468,6 +1492,7 @@ waffle
 waiter
 wallet
 wander
+warden
 wasn't
 weaken
 weapon
